damn dags -- closing

--- a/manuscripts/24-accepted-ehs/part-1-dags/s1-part-1-dags.tex
+++ b/manuscripts/24-accepted-ehs/part-1-dags/s1-part-1-dags.tex
@@ -197,7 +197,7 @@ Causal Diagrams and Confounding''}
       
 
 
-\date{2024-06-12}
+\date{2024-06-19}
 \begin{document}
 \maketitle
 
@@ -237,9 +237,9 @@ societies where it took hold (see: Weber
 (\citeproc{ref-weber1905}{1905}); Weber
 (\citeproc{ref-weber1993}{1993}); Swanson
 (\citeproc{ref-swanson1967}{1967}); Swanson
-(\citeproc{ref-swanson1971}{1971}); Basten and Betz
-(\citeproc{ref-basten2013}{2013}), and for an overview, see: Becker
-\emph{et al.} (\citeproc{ref-becker2016}{2016})).
+(\citeproc{ref-swanson1971}{1971}); Basten \& Betz
+(\citeproc{ref-basten2013}{2013}), and for an overview, see: Becker et
+al. (\citeproc{ref-becker2016}{2016})).
 
 Suppose we want to estimate the Protestant Reformation's `Average
 Treatment Effect'. Let \(A = a^*\) denote the adoption of Protestantism.
@@ -272,12 +272,12 @@ consistently across different countries and time periods.
 
 There is undoubtedly considerable heterogeneity in the `Protestant
 treatment.' In England, Protestantism was closely tied to the monarchy
-(\citeproc{ref-collinson2003}{Collinson 2003}). In Germany, Martin
+(\citeproc{ref-collinson2003}{Collinson, 2003}). In Germany, Martin
 Luther's teachings emphasised individual faith in scripture, which, it
 has been claimed, supported economic development by promoting literacy
-(\citeproc{ref-gawthrop1984}{Gawthrop and Strauss 1984}). In England,
+(\citeproc{ref-gawthrop1984}{Gawthrop \& Strauss, 1984}). In England,
 King Henry VIII abolished Catholicism
-(\citeproc{ref-collinson2003}{Collinson 2003}). The Reformation, then,
+(\citeproc{ref-collinson2003}{Collinson, 2003}). The Reformation, then,
 occurred differently in different places. The treatment needs to be
 better defined.
 
@@ -300,8 +300,8 @@ historical events, or political circumstances, some countries might only
 ever have the possibility of either remaining Catholic or becoming
 Protestant, but not both. For example, it is unclear under which
 conditions 16th-century Spain could have been randomly assigned to
-Protestantism (\citeproc{ref-nalle1987}{Nalle 1987};
-\citeproc{ref-westreich2010}{Westreich and Cole 2010}).
+Protestantism (\citeproc{ref-nalle1987}{Nalle, 1987};
+\citeproc{ref-westreich2010}{Westreich \& Cole, 2010}).
 
 Perhaps a more credible measure of effect in the region of our interests
 is the Average Treatment Effect in the Treated (ATT) expressed:
@@ -328,8 +328,8 @@ comparable Catholic cultures effectively. By estimating the ATT, we
 avoid the assumption of non-deterministic positivity for the untreated.
 However, whether matching is conceptually plausible remains debatable.
 Ostensibly, it would seem that assigning a religion to a culture is not
-as easy as administering a pill (\citeproc{ref-watts2018}{Watts \emph{et
-al.} 2018}).
+as easy as administering a pill (\citeproc{ref-watts2018}{Watts et al.,
+2018}).
 
 \newpage{}
 
@@ -339,36 +339,36 @@ Treatment}\label{id-app-c}
 To better understand how the causal consistency assumption might fail,
 consider a question discussed in the evolutionary human science
 literature about whether a society's beliefs in big Gods affect its
-development of social complexity (\citeproc{ref-beheim2021}{Beheim
-\emph{et al.} 2021}; \citeproc{ref-johnson2015}{Johnson 2015};
-\citeproc{ref-norenzayan2016}{Norenzayan \emph{et al.} 2016};
-\citeproc{ref-sheehan2022}{Sheehan \emph{et al.} 2022};
-\citeproc{ref-slingerland2020coding}{Slingerland \emph{et al.} 2020};
-\citeproc{ref-watts2015}{Watts \emph{et al.} 2015};
-\citeproc{ref-whitehouse2023}{Whitehouse \emph{et al.} 2023}).
-Historians and anthropologists report that such beliefs vary over time
-and across cultures in intensity, interpretations, institutional
-management, and rituals (\citeproc{ref-bulbuliaj.2013}{Bulbulia, J.
-\emph{et al.} 2013}; \citeproc{ref-decoulanges1903}{De Coulanges 1903};
-\citeproc{ref-geertz2013}{Geertz \emph{et al.} 2013};
-\citeproc{ref-wheatley1971}{Wheatley 1971}). This variation in content
+development of social complexity (\citeproc{ref-beheim2021}{Beheim et
+al., 2021}; \citeproc{ref-johnson2015}{Johnson, 2015};
+\citeproc{ref-norenzayan2016}{Norenzayan et al., 2016};
+\citeproc{ref-sheehan2022}{Sheehan et al., 2022};
+\citeproc{ref-slingerland2020coding}{Slingerland et al., 2020};
+\citeproc{ref-watts2015}{Watts et al., 2015};
+\citeproc{ref-whitehouse2023}{Whitehouse et al., 2023}). Historians and
+anthropologists report that such beliefs vary over time and across
+cultures in intensity, interpretations, institutional management, and
+rituals (\citeproc{ref-bulbuliaj.2013}{Bulbulia, J. et al., 2013};
+\citeproc{ref-decoulanges1903}{De Coulanges, 1903};
+\citeproc{ref-geertz2013}{Geertz et al., 2013};
+\citeproc{ref-wheatley1971}{Wheatley, 1971}). This variation in content
 and settings could influence social complexity. Moreover, the treatments
 realised in one society might affect those realised in other societies,
 resulting in \emph{spill-over} effects in the exposures (`treatments')
-to be compared (\citeproc{ref-murray2021a}{Murray \emph{et al.} 2021};
-\citeproc{ref-shiba2023uncovering}{Shiba \emph{et al.} 2023}).
+to be compared (\citeproc{ref-murray2021a}{Murray et al., 2021};
+\citeproc{ref-shiba2023uncovering}{Shiba et al., 2023}).
 
 The theory of causal inference under multiple versions of treatment,
 developed by VanderWeele and Hernán, formally addresses this challenge
 of treatment-effect heterogeneity
-(\citeproc{ref-vanderweele2009}{VanderWeele 2009},
+(\citeproc{ref-vanderweele2009}{VanderWeele, 2009},
 \citeproc{ref-vanderweele2018}{2018};
-\citeproc{ref-vanderweele2013}{VanderWeele and Hernan 2013}). The
+\citeproc{ref-vanderweele2013}{VanderWeele \& Hernan, 2013}). The
 authors proved that if the treatment variations, \(K\), are
 conditionally independent of the potential outcomes, \(Y(k)\), given
 covariates \(L\), then conditioning on \(L\) allows us to consistently
 estimate causal effects over the heterogeneous treatments
-(\citeproc{ref-vanderweele2009}{VanderWeele 2009}).
+(\citeproc{ref-vanderweele2009}{VanderWeele, 2009}).
 
 Where \(\coprod\) denotes independence, we may assume causal consistency
 where the interventions to be compared are independent of their
@@ -389,7 +389,7 @@ interpreting causal effect estimates under this theory can be
 challenging.
 
 Consider the question of whether a reduction in Body Mass Index (BMI)
-affects health (\citeproc{ref-hernuxe1n2008}{Hernán and Taubman 2008}).
+affects health (\citeproc{ref-hernuxe1n2008}{Hernán \& Taubman, 2008}).
 Weight loss can occur through various methods, each with different
 health implications. Specific methods, such as regular exercise or a
 calorie-reduced diet, benefit health. However, weight loss might result
@@ -406,9 +406,9 @@ exercise over at least five years, compared with no weight loss.' This
 specificity in the definition of the treatment, along with comparable
 specificity in the statement of the outcomes, helps ensure that the
 causal estimates we obtain are not merely unbiased but also
-interpretable; for discussion, see Hernán \emph{et al.}
-(\citeproc{ref-hernuxe1n2022}{2022}); Murray \emph{et al.}
-(\citeproc{ref-murray2021a}{2021}); Hernán and Taubman
+interpretable; for discussion, see Hernán et al.
+(\citeproc{ref-hernuxe1n2022}{2022}); Murray et al.
+(\citeproc{ref-murray2021a}{2021}); Hernán \& Taubman
 (\citeproc{ref-hernuxe1n2008}{2008}).
 
 Beyond uncertainties for the interpretation of heterogeneous treatment
@@ -422,9 +422,9 @@ for interference will often make it difficult to warrant the assumption
 that the potential outcomes are independent of the many versions of
 treatment that have been realised, dependently, on the administration of
 previous versions of treatments across the population
-(\citeproc{ref-bulbulia2023a}{Bulbulia \emph{et al.} 2023};
-\citeproc{ref-ogburn2022}{Ogburn \emph{et al.} 2022};
-\citeproc{ref-vanderweele2013}{VanderWeele and Hernan 2013}).
+(\citeproc{ref-bulbulia2023a}{Bulbulia et al., 2023};
+\citeproc{ref-ogburn2022}{Ogburn et al., 2022};
+\citeproc{ref-vanderweele2013}{VanderWeele \& Hernan, 2013}).
 
 In short, although the theory of causal inference under multiple
 versions of treatment provides a formal solution for consistent causal
@@ -446,173 +446,180 @@ recovering the remaining half.
 \phantomsection\label{refs}
 \begin{CSLReferences}{1}{0}
 \bibitem[\citeproctext]{ref-basten2013}
-Basten, C, and Betz, F (2013) Beyond work ethic: Religion, individual,
+Basten, C., \& Betz, F. (2013). Beyond work ethic: Religion, individual,
 and political preferences. \emph{American Economic Journal: Economic
-Policy}, \textbf{5}(3), 67--91.
-doi:\href{https://doi.org/10.1257/pol.5.3.67}{10.1257/pol.5.3.67}.
+Policy}, \emph{5}(3), 67--91. \url{https://doi.org/10.1257/pol.5.3.67}
 
 \bibitem[\citeproctext]{ref-becker2016}
-Becker, SO, Pfaff, S, and Rubin, J (2016) Causes and consequences of the
-protestant reformation. \emph{Explorations in Economic History},
-\textbf{62}, 1--25.
+Becker, S. O., Pfaff, S., \& Rubin, J. (2016). Causes and consequences
+of the protestant reformation. \emph{Explorations in Economic History},
+\emph{62}, 1--25.
 
 \bibitem[\citeproctext]{ref-beheim2021}
-Beheim, B, Atkinson, QD, Bulbulia, J, \ldots{} Willard, AK (2021)
-Treatment of missing data determined conclusions regarding moralizing
-gods. \emph{Nature}, \textbf{595}(7866), E29--E34.
-doi:\href{https://doi.org/10.1038/s41586-021-03655-4}{10.1038/s41586-021-03655-4}.
+Beheim, B., Atkinson, Q. D., Bulbulia, J., Gervais, W., Gray, R. D.,
+Henrich, J., Lang, M., Monroe, M. W., Muthukrishna, M., Norenzayan, A.,
+Purzycki, B. G., Shariff, A., Slingerland, E., Spicer, R., \& Willard,
+A. K. (2021). Treatment of missing data determined conclusions regarding
+moralizing gods. \emph{Nature}, \emph{595}(7866), E29--E34.
+\url{https://doi.org/10.1038/s41586-021-03655-4}
 
 \bibitem[\citeproctext]{ref-bulbulia2023a}
-Bulbulia, JA, Afzali, MU, Yogeeswaran, K, and Sibley, CG (2023)
-Long-term causal effects of far-right terrorism in {N}ew {Z}ealand.
-\emph{PNAS Nexus}, \textbf{2}(8), pgad242.
+Bulbulia, J. A., Afzali, M. U., Yogeeswaran, K., \& Sibley, C. G.
+(2023). Long-term causal effects of far-right terrorism in {N}ew
+{Z}ealand. \emph{PNAS Nexus}, \emph{2}(8), pgad242.
 
 \bibitem[\citeproctext]{ref-bulbuliaj.2013}
-Bulbulia, J., Geertz, AW, Atkinson, QD, \ldots{} Wilson, DS (2013) The
-cultural evolution of religion. In P. J. Richerson and M. Christiansen,
-eds., Cambridge, MA: MIT press, 381--404.
+Bulbulia, J., Geertz, A. W., Atkinson, Q. D., Cohen, E., Evans, N.,
+Francois, P., Gintis, H., Gray, R. D., Henrich, J., Jordon, F. M.,
+Norenzayan, A., Richerson, P. J., Slingerland, E., Turchin, P.,
+Whitehouse, H., Widlok, T., \& Wilson, D. S. (2013). \emph{The cultural
+evolution of religion} (P. J. Richerson \& M. Christiansen, Eds.; pp.
+381--404). MIT press.
 
 \bibitem[\citeproctext]{ref-collinson2003}
-Collinson, P (2003) \emph{The reformation: A history}, Weidenfeld;
+Collinson, P. (2003). \emph{The reformation: A history}. Weidenfeld;
 Nicholson; London, England.
 
 \bibitem[\citeproctext]{ref-decoulanges1903}
-De Coulanges, F (1903) \emph{La cité antique: Étude sur le culte, le
-droit, les institutions de la grèce et de rome}, Hachette.
+De Coulanges, F. (1903). \emph{La cité antique: Étude sur le culte, le
+droit, les institutions de la grèce et de rome}. Hachette.
 
 \bibitem[\citeproctext]{ref-gawthrop1984}
-Gawthrop, R, and Strauss, G (1984) Protestantism and literacy in early
-modern germany. \emph{Past \& Present}, (104), 31--55.
+Gawthrop, R., \& Strauss, G. (1984). Protestantism and literacy in early
+modern germany. \emph{Past \& Present}, \emph{104}, 31--55.
 
 \bibitem[\citeproctext]{ref-geertz2013}
-Geertz, AW, Atkinson, QD, Cohen, E, \ldots{} Wilson, DS (2013) The
-cultural evolution of religion. In P. J. Richerson and M. Christiansen,
-eds., Cambridge, MA: MIT press, 381--404.
+Geertz, A. W., Atkinson, Q. D., Cohen, E., Evans, N., Francois, P.,
+Gintis, H., Gray, R. D., Henrich, J., Jordon, F. M., Norenzayan, A.,
+Richerson, P. J., Slingerland, E., Turchin, P., Whitehouse, H., Widlok,
+T., \& Wilson, D. S. (2013). \emph{The cultural evolution of religion}
+(P. J. Richerson \& M. Christiansen, Eds.; pp. 381--404). MIT press.
 
 \bibitem[\citeproctext]{ref-hernuxe1n2008}
-Hernán, MA, and Taubman, SL (2008) Does obesity shorten life? The
+Hernán, M. A., \& Taubman, S. L. (2008). Does obesity shorten life? The
 importance of well-defined interventions to answer causal questions.
-\emph{International Journal of Obesity (2005)}, \textbf{32 Suppl 3},
-S8--14.
-doi:\href{https://doi.org/10.1038/ijo.2008.82}{10.1038/ijo.2008.82}.
+\emph{International Journal of Obesity (2005)}, \emph{32 Suppl 3},
+S8--14. \url{https://doi.org/10.1038/ijo.2008.82}
 
 \bibitem[\citeproctext]{ref-hernuxe1n2022}
-Hernán, MA, Wang, W, and Leaf, DE (2022) Target trial emulation: A
-framework for causal inference from observational data. \emph{JAMA},
-\textbf{328}(24), 2446--2447.
-doi:\href{https://doi.org/10.1001/jama.2022.21383}{10.1001/jama.2022.21383}.
+Hernán, M. A., Wang, W., \& Leaf, D. E. (2022). Target trial emulation:
+A framework for causal inference from observational data. \emph{JAMA},
+\emph{328}(24), 2446--2447.
+\url{https://doi.org/10.1001/jama.2022.21383}
 
 \bibitem[\citeproctext]{ref-johnson2015}
-Johnson, DD (2015) Big gods, small wonder: Supernatural punishment
-strikes back. \emph{Religion, Brain \& Behavior}, \textbf{5}(4),
-290--298.
+Johnson, D. D. (2015). Big gods, small wonder: Supernatural punishment
+strikes back. \emph{Religion, Brain \& Behavior}, \emph{5}(4), 290--298.
 
 \bibitem[\citeproctext]{ref-murray2021a}
-Murray, EJ, Marshall, BDL, and Buchanan, AL (2021) Emulating target
-trials to improve causal inference from agent-based models.
-\emph{American Journal of Epidemiology}, \textbf{190}(8), 1652--1658.
-doi:\href{https://doi.org/10.1093/aje/kwab040}{10.1093/aje/kwab040}.
+Murray, E. J., Marshall, B. D. L., \& Buchanan, A. L. (2021). Emulating
+target trials to improve causal inference from agent-based models.
+\emph{American Journal of Epidemiology}, \emph{190}(8), 1652--1658.
+\url{https://doi.org/10.1093/aje/kwab040}
 
 \bibitem[\citeproctext]{ref-nalle1987}
-Nalle, ST (1987) Inquisitors, priests, and the people during the
+Nalle, S. T. (1987). Inquisitors, priests, and the people during the
 catholic reformation in spain. \emph{The Sixteenth Century Journal},
 557--587.
 
 \bibitem[\citeproctext]{ref-norenzayan2016}
-Norenzayan, A, Shariff, AF, Gervais, WM, \ldots{} Henrich, J (2016) The
-cultural evolution of prosocial religions. \emph{Behavioral and Brain
-Sciences}, \textbf{39}, e1.
-doi:\href{https://doi.org/10.1017/S0140525X14001356}{10.1017/S0140525X14001356}.
+Norenzayan, A., Shariff, A. F., Gervais, W. M., Willard, A. K.,
+McNamara, R. A., Slingerland, E., \& Henrich, J. (2016). The cultural
+evolution of prosocial religions. \emph{Behavioral and Brain Sciences},
+\emph{39}, e1. \url{https://doi.org/10.1017/S0140525X14001356}
 
 \bibitem[\citeproctext]{ref-ogburn2022}
-Ogburn, EL, Sofrygin, O, Díaz, I, and Laan, MJ van der (2022) Causal
-inference for social network data. \emph{Journal of the American
-Statistical Association}, \textbf{0}(0), 1--15.
-doi:\href{https://doi.org/10.1080/01621459.2022.2131557}{10.1080/01621459.2022.2131557}.
+Ogburn, E. L., Sofrygin, O., Díaz, I., \& Laan, M. J. van der. (2022).
+Causal inference for social network data. \emph{Journal of the American
+Statistical Association}, \emph{0}(0), 1--15.
+\url{https://doi.org/10.1080/01621459.2022.2131557}
 
 \bibitem[\citeproctext]{ref-rubin1980randomization}
-Rubin, DB (1980) Randomization analysis of experimental data: The fisher
-randomization test comment. \emph{Journal of the American Statistical
-Association}, \textbf{75}(371), 591--593.
-doi:\href{https://doi.org/10.2307/2287653}{10.2307/2287653}.
+Rubin, D. B. (1980). Randomization analysis of experimental data: The
+fisher randomization test comment. \emph{Journal of the American
+Statistical Association}, \emph{75}(371), 591--593.
+\url{https://doi.org/10.2307/2287653}
 
 \bibitem[\citeproctext]{ref-sheehan2022}
-Sheehan, O, Watts, J, Gray, RD, \ldots{} Atkinson, QD (2022) Coevolution
-of religious and political authority in austronesian societies.
-\emph{Nature Human Behaviour}.
-doi:\href{https://doi.org/10.1038/s41562-022-01471-y}{10.1038/s41562-022-01471-y}.
+Sheehan, O., Watts, J., Gray, R. D., Bulbulia, J., Claessens, S.,
+Ringen, E. J., \& Atkinson, Q. D. (2022). Coevolution of religious and
+political authority in austronesian societies. \emph{Nature Human
+Behaviour}. \url{https://doi.org/10.1038/s41562-022-01471-y}
 
 \bibitem[\citeproctext]{ref-shiba2023uncovering}
-Shiba, K, Daoud, A, Hikichi, H, \ldots{} Kawachi, I (2023) Uncovering
-heterogeneous associations between disaster-related trauma and
-subsequent functional limitations: A machine-learning approach.
-\emph{American Journal of Epidemiology}, \textbf{192}(2), 217--229.
+Shiba, K., Daoud, A., Hikichi, H., Yazawa, A., Aida, J., Kondo, K., \&
+Kawachi, I. (2023). Uncovering heterogeneous associations between
+disaster-related trauma and subsequent functional limitations: A
+machine-learning approach. \emph{American Journal of Epidemiology},
+\emph{192}(2), 217--229.
 
 \bibitem[\citeproctext]{ref-slingerland2020coding}
-Slingerland, E, Atkinson, QD, Ember, CR, \ldots{} Gray, RD (2020) Coding
-culture: Challenges and recommendations for comparative cultural
-databases. \emph{Evolutionary Human Sciences}, \textbf{2}, e29.
+Slingerland, E., Atkinson, Q. D., Ember, C. R., Sheehan, O.,
+Muthukrishna, M., Bulbulia, J., \& Gray, R. D. (2020). Coding culture:
+Challenges and recommendations for comparative cultural databases.
+\emph{Evolutionary Human Sciences}, \emph{2}, e29.
 
 \bibitem[\citeproctext]{ref-swanson1967}
-Swanson, GE (1967) Religion and regime: A sociological account of the
-{R}eformation.
+Swanson, G. E. (1967). \emph{Religion and regime: A sociological account
+of the {R}eformation}.
 
 \bibitem[\citeproctext]{ref-swanson1971}
-Swanson, GE (1971) Interpreting the reformation. \emph{The Journal of
-Interdisciplinary History}, \textbf{1}(3), 419--446. Retrieved from
+Swanson, G. E. (1971). Interpreting the reformation. \emph{The Journal
+of Interdisciplinary History}, \emph{1}(3), 419--446.
 \url{http://www.jstor.org/stable/202620}
 
 \bibitem[\citeproctext]{ref-vanderweele2009}
-VanderWeele, TJ (2009) Concerning the consistency assumption in causal
-inference. \emph{Epidemiology}, \textbf{20}(6), 880.
-doi:\href{https://doi.org/10.1097/EDE.0b013e3181bd5638}{10.1097/EDE.0b013e3181bd5638}.
+VanderWeele, T. J. (2009). Concerning the consistency assumption in
+causal inference. \emph{Epidemiology}, \emph{20}(6), 880.
+\url{https://doi.org/10.1097/EDE.0b013e3181bd5638}
 
 \bibitem[\citeproctext]{ref-vanderweele2018}
-VanderWeele, TJ (2018) On well-defined hypothetical interventions in the
-potential outcomes framework. \emph{Epidemiology}, \textbf{29}(4), e24.
-doi:\href{https://doi.org/10.1097/EDE.0000000000000823}{10.1097/EDE.0000000000000823}.
+VanderWeele, T. J. (2018). On well-defined hypothetical interventions in
+the potential outcomes framework. \emph{Epidemiology}, \emph{29}(4),
+e24. \url{https://doi.org/10.1097/EDE.0000000000000823}
 
 \bibitem[\citeproctext]{ref-vanderweele2013}
-VanderWeele, TJ, and Hernan, MA (2013) Causal inference under multiple
-versions of treatment. \emph{Journal of Causal Inference},
-\textbf{1}(1), 1--20.
+VanderWeele, T. J., \& Hernan, M. A. (2013). Causal inference under
+multiple versions of treatment. \emph{Journal of Causal Inference},
+\emph{1}(1), 1--20.
 
 \bibitem[\citeproctext]{ref-watts2015}
-Watts, J, Greenhill, SJ, Atkinson, QD, Currie, TE, Bulbulia, J, and
-Gray, RD (2015) \emph{Broad supernatural punishment but not moralizing
-high gods precede the evolution of political complexity in
-{A}ustronesia} \emph{Proceedings of the Royal Society B: Biological
-Sciences}, Vol. 282, The Royal Society, 20142556.
+Watts, J., Greenhill, S. J., Atkinson, Q. D., Currie, T. E., Bulbulia,
+J., \& Gray, R. D. (2015). Broad supernatural punishment but not
+moralizing high gods precede the evolution of political complexity in
+{A}ustronesia. In \emph{Proceedings of the Royal Society B: Biological
+Sciences} (Vol. 282, p. 20142556). The Royal Society.
 
 \bibitem[\citeproctext]{ref-watts2018}
-Watts, J, Sheehan, O, Bulbulia, Joseph A, Gray, RD, and Atkinson, QD
-(2018) Christianity spread faster in small, politically structured
-societies. \emph{Nature Human Behaviour}, \textbf{2}(8), 559--564.
-doi:\href{https://doi.org/gdvnjn}{gdvnjn}.
+Watts, J., Sheehan, O., Bulbulia, Joseph A, Gray, R. D., \& Atkinson, Q.
+D. (2018). Christianity spread faster in small, politically structured
+societies. \emph{Nature Human Behaviour}, \emph{2}(8), 559--564.
+\url{https://doi.org/gdvnjn}
 
 \bibitem[\citeproctext]{ref-weber1905}
-Weber, M (1905) \emph{The protestant ethic and the spirit of capitalism:
-And other writings}, Penguin.
+Weber, M. (1905). \emph{The protestant ethic and the spirit of
+capitalism: And other writings}. Penguin.
 
 \bibitem[\citeproctext]{ref-weber1993}
-Weber, M (1993) \emph{The sociology of religion}, Beacon Press.
+Weber, M. (1993). \emph{The sociology of religion}. Beacon Press.
 
 \bibitem[\citeproctext]{ref-westreich2010}
-Westreich, D, and Cole, SR (2010) Invited commentary: positivity in
-practice. \emph{American Journal of Epidemiology}, \textbf{171}(6).
-doi:\href{https://doi.org/10.1093/aje/kwp436}{10.1093/aje/kwp436}.
+Westreich, D., \& Cole, S. R. (2010). Invited commentary: positivity in
+practice. \emph{American Journal of Epidemiology}, \emph{171}(6).
+\url{https://doi.org/10.1093/aje/kwp436}
 
 \bibitem[\citeproctext]{ref-wheatley1971}
-Wheatley, P (1971) \emph{The pivot of the four quarters : A preliminary
-enquiry into the origins and character of the ancient chinese city},
-Edinburgh University Press. Retrieved from
+Wheatley, P. (1971). \emph{The pivot of the four quarters : A
+preliminary enquiry into the origins and character of the ancient
+chinese city}. Edinburgh University Press.
 \url{https://cir.nii.ac.jp/crid/1130000795717727104}
 
 \bibitem[\citeproctext]{ref-whitehouse2023}
-Whitehouse, H, Francois, P, Savage, PE, \ldots{} Turchin, P (2023)
-Testing the big gods hypothesis with global historical data: A review
-and retake. \emph{Religion, Brain \& Behavior}, \textbf{13}(2),
-124--166.
+Whitehouse, H., Francois, P., Savage, P. E., Hoyer, D., Feeney, K. C.,
+Cioni, E., Purcell, R., Larson, J., Baines, J., Haar, B. ter, Covey, A.,
+\& Turchin, P. (2023). Testing the big gods hypothesis with global
+historical data: A review and retake. \emph{Religion, Brain \&
+Behavior}, \emph{13}(2), 124--166.
 
 \end{CSLReferences}
 
