--- a/manuscripts/24-accepted-ehs/part-2-time-varying/s1-part-2-time-vary.tex
+++ b/manuscripts/24-accepted-ehs/part-2-time-varying/s1-part-2-time-vary.tex
@@ -197,7 +197,7 @@ Interaction, Mediation, and Time-Varying Treatments''}
       
 
 
-\date{2024-06-11}
+\date{2024-06-19}
 \begin{document}
 \maketitle
 
@@ -249,14 +249,14 @@ Template \(\mathcal{G}_2\) and Single World Intervention Graphs
 nodes are obtained by node-splitting. \(\rightarrowlightgray\) denotes a
 backdoor path that is closed when a treatment is fixed.
 \(\rightarrowcyan\) highlights identifying paths for \(X_0 = x_0\) and
-\(X_1 = x_1\). Robins and Richardson
+\(X_1 = x_1\). J. M. Robins \& Richardson
 (\citeproc{ref-robins2010alternative}{2010}) uses a variation of
 \(\mathcal{G}_2\) to show that there is sequential exchangeability of
 \(X_t \forall t: Y(x_1, x_0)\coprod X_0\) (unconditionally) and
 \(Y(x_1, x_0)\coprod X_1(x_0) | Z(x_0), X_0\). By causal consistency
 \(Z(x_0) = Z|X_0 = x_0\). Single world interventions
 \(\mathcal{G}_{3-6}\) make this sequential exchangeability clear (refer
-to Richardson and Robins (\citeproc{ref-richardson2013}{2013})). Such
+to Richardson \& Robins (\citeproc{ref-richardson2013}{2013})). Such
 clarity is, in my view, an excellent reason to use Single World
 Intervention Graphs.
 
@@ -265,11 +265,11 @@ Intervention Graphs.
 \subsection{S3. Richardson and Robin's Extended Dynamic
 G-formula}\label{id-app-c}
 
-Richardson and Robins (\citeproc{ref-richardson2013}{2013}) propose an
-extension of Robins (\citeproc{ref-robins1986}{1986})'s dynamic
+Richardson \& Robins (\citeproc{ref-richardson2013}{2013}) propose an
+extension of J. Robins (\citeproc{ref-robins1986}{1986})'s dynamic
 g-formula for identifying causality under dynamic treatment regimes.
 Here, I reproduce the key details of their identification algorithm. I
-refer readers to Richardson and Robins
+refer readers to Richardson \& Robins
 (\citeproc{ref-richardson2013}{2013}) for the full algorithm and its
 proofs.
 
@@ -283,7 +283,7 @@ set of counterfactual nodes following treatments.
 counterfactual variables under a dynamic regime corresponding to Table
 12 \(\mathbf{G}_4\) in the main article.
 
-Richardson and Robins (\citeproc{ref-richardson2013}{2013}) define this
+Richardson \& Robins (\citeproc{ref-richardson2013}{2013}) define this
 set as follows:
 
 \[
@@ -292,7 +292,7 @@ set as follows:
 
 Next, at each intervention node \(t\), our task is to find all ancestors
 of \(Y(\mathbf{g})\) in \(\mathbb{W}(\mathbf{g})\) that are not in the
-set of current or past treatment covariates. Richardson and Robins
+set of current or past treatment covariates. Richardson \& Robins
 (\citeproc{ref-richardson2013}{2013}) define this set as follows:
 
 \[
@@ -312,7 +312,7 @@ This new \texttt{dSWIG} or
 Fourth, our task is to ensure conditional independence of the treatment
 \(A_t = a^*\) with members of the set \(\mathbb{Z}_t\), for all
 \(\mathbf{a}^*\) (fixed nodes) and all time points \(t \in 1...\tau\),
-where \(\tau\) is the end of the study. Richardson and Robins
+where \(\tau\) is the end of the study. Richardson \& Robins
 (\citeproc{ref-richardson2013}{2013}) define this set as follows:
 
 \[
@@ -351,7 +351,7 @@ where:
 \end{itemize}
 
 In the example describe in the main article Table 12 \(\mathcal{G}_4\),
-\(\mathbb{Z}_t(\mathbf{g})\), we apply Richardson and Robins
+\(\mathbb{Z}_t(\mathbf{g})\), we apply Richardson \& Robins
 (\citeproc{ref-richardson2013}{2013})'s dynamic extended g-formula, and
 obtain:
 
@@ -374,20 +374,19 @@ not identified.
 \subsection{S4. Structural Causal Models and Shift
 interventions}\label{s4.-structural-causal-models-and-shift-interventions}
 
-Below is Díaz \emph{et al.} (\citeproc{ref-duxedaz2021}{2021})`s
-formulation of Pearl (\citeproc{ref-pearl2009a}{2009})'s mathematical
-representation of a structural causal model with non-independent errors.
-I present Díaz \emph{et al.} (\citeproc{ref-duxedaz2021}{2021})'s
-formulation because it allows us to present a structural causal model
-for dynamic treatment strategies Richardson and Robins
-(\citeproc{ref-richardson2013}{2013}), also known as longitudinal
-modified treatment policies Hoffman \emph{et al.}
-(\citeproc{ref-hoffman2023}{2023}). Note further that Richardson and
+Below is Díaz et al. (\citeproc{ref-duxedaz2021}{2021})`s formulation of
+Pearl (\citeproc{ref-pearl2009a}{2009})'s mathematical representation of
+a structural causal model with non-independent errors. I present Díaz et
+al. (\citeproc{ref-duxedaz2021}{2021})'s formulation because it allows
+us to present a structural causal model for dynamic treatment strategies
+Richardson \& Robins (\citeproc{ref-richardson2013}{2013}), also known
+as longitudinal modified treatment policies Hoffman et al.
+(\citeproc{ref-hoffman2023}{2023}). Note further that Richardson \&
 Robins (\citeproc{ref-richardson2013}{2013}) develop their account of
 time-varying treatments using structural causal models. The difference
 is that on the potential outcome framework, identification does not rely
 on non-independent error terms or so-called 'cross-world' assumptions
-(\citeproc{ref-richardson2013}{Richardson and Robins 2013 pp. 60--84}).
+(\citeproc{ref-richardson2013}{Richardson \& Robins, 2013, pp. 60--84}).
 
 Following Díaz, we begin by defining the sequence of variables in our
 model:
@@ -507,15 +506,15 @@ is:
 Y(\bar{A}^\mathbf{g}) = f_Y(A^\mathbf{g}_\tau, H_\tau(\bar{A}^\mathbf{g}_{\tau-1}), U_{Y})
 \]
 
-Williams and Díaz (\citeproc{ref-williams2021}{2021}) have developed the
+Williams \& Díaz (\citeproc{ref-williams2021}{2021}) have developed the
 lmtp package in R for estimating time-varying treatments with
 time-varying confounding. Among the many excellent features of their
 software is that it uses semi-parametric estimators, which can be
-specified from the Polley \emph{et al.}
-(\citeproc{ref-SuperLearner2023}{2023}) library. Readers working with
-\texttt{lmtp} might find the following collection of tools useful for
-evaluating assumptions, creating graphical outputs and tables, and
-automating reporting: Bulbulia (\citeproc{ref-margot2024}{2024}).
+specified from the Polley et al. (\citeproc{ref-SuperLearner2023}{2023})
+library. Readers working with \texttt{lmtp} might find the following
+collection of tools useful for evaluating assumptions, creating
+graphical outputs and tables, and automating reporting: Bulbulia
+(\citeproc{ref-margot2024}{2024}).
 
 \newpage{}
 
@@ -524,51 +523,50 @@ automating reporting: Bulbulia (\citeproc{ref-margot2024}{2024}).
 \phantomsection\label{refs}
 \begin{CSLReferences}{1}{0}
 \bibitem[\citeproctext]{ref-margot2024}
-Bulbulia, JA (2024) \emph{Margot: MARGinal observational
-treatment-effects}.
-doi:\href{https://doi.org/10.5281/zenodo.10907724}{10.5281/zenodo.10907724}.
+Bulbulia, J. A. (2024). \emph{Margot: MARGinal observational
+treatment-effects}. \url{https://doi.org/10.5281/zenodo.10907724}
 
 \bibitem[\citeproctext]{ref-duxedaz2021}
-Díaz, I, Williams, N, Hoffman, KL, and Schenck, EJ (2021) Non-parametric
-causal effects based on longitudinal modified treatment policies.
-\emph{Journal of the American Statistical Association}.
-doi:\href{https://doi.org/10.1080/01621459.2021.1955691}{10.1080/01621459.2021.1955691}.
+Díaz, I., Williams, N., Hoffman, K. L., \& Schenck, E. J. (2021).
+Non-parametric causal effects based on longitudinal modified treatment
+policies. \emph{Journal of the American Statistical Association}.
+\url{https://doi.org/10.1080/01621459.2021.1955691}
 
 \bibitem[\citeproctext]{ref-hoffman2023}
-Hoffman, KL, Salazar-Barreto, D, Rudolph, KE, and Díaz, I (2023)
-Introducing longitudinal modified treatment policies: A unified
-framework for studying complex exposures.
-doi:\href{https://doi.org/10.48550/arXiv.2304.09460}{10.48550/arXiv.2304.09460}.
+Hoffman, K. L., Salazar-Barreto, D., Rudolph, K. E., \& Díaz, I. (2023).
+\emph{Introducing longitudinal modified treatment policies: A unified
+framework for studying complex exposures}.
+\url{https://doi.org/10.48550/arXiv.2304.09460}
 
 \bibitem[\citeproctext]{ref-pearl2009a}
-Pearl, J (2009) \emph{Causality}, Cambridge University Press.
+Pearl, J. (2009). \emph{Causality}. Cambridge University Press.
 
 \bibitem[\citeproctext]{ref-SuperLearner2023}
-Polley, E, LeDell, E, Kennedy, C, and van der Laan, M (2023)
-\emph{SuperLearner: Super learner prediction}. Retrieved from
+Polley, E., LeDell, E., Kennedy, C., \& van der Laan, M. (2023).
+\emph{SuperLearner: Super learner prediction}.
 \url{https://github.com/ecpolley/SuperLearner}
 
 \bibitem[\citeproctext]{ref-richardson2013}
-Richardson, TS, and Robins, JM (2013) Single world intervention graphs:
-A primer. In, Citeseer. Retrieved from
+Richardson, T. S., \& Robins, J. M. (2013). \emph{Single world
+intervention graphs: A primer}.
 \url{https://core.ac.uk/display/102673558}
 
 \bibitem[\citeproctext]{ref-robins1986}
-Robins, J (1986) A new approach to causal inference in mortality studies
-with a sustained exposure period---application to control of the healthy
-worker survivor effect. \emph{Mathematical Modelling}, \textbf{7}(9-12),
-1393--1512.
+Robins, J. (1986). A new approach to causal inference in mortality
+studies with a sustained exposure period---application to control of the
+healthy worker survivor effect. \emph{Mathematical Modelling},
+\emph{7}(9-12), 1393--1512.
 
 \bibitem[\citeproctext]{ref-robins2010alternative}
-Robins, JM, and Richardson, TS (2010) Alternative graphical causal
+Robins, J. M., \& Richardson, T. S. (2010). Alternative graphical causal
 models and the identification of direct effects. \emph{Causality and
 Psychopathology: Finding the Determinants of Disorders and Their Cures},
-\textbf{84}, 103--158.
+\emph{84}, 103--158.
 
 \bibitem[\citeproctext]{ref-williams2021}
-Williams, NT, and Díaz, I (2021) \emph{{l}mtp: Non-parametric causal
+Williams, N. T., \& Díaz, I. (2021). \emph{{l}mtp: Non-parametric causal
 effects of feasible interventions based on modified treatment policies}.
-doi:\href{https://doi.org/10.5281/zenodo.3874931}{10.5281/zenodo.3874931}.
+\url{https://doi.org/10.5281/zenodo.3874931}
 
 \end{CSLReferences}
 
