--- a/manuscripts/24-accepted-ehs/part-3-measurement/s1-part-3-measurement.qmd
+++ b/manuscripts/24-accepted-ehs/part-3-measurement/s1-part-3-measurement.qmd
@@ -41,7 +41,7 @@ execute:
   eval: true
 fontfamily: libertinus
 bibliography: /Users/joseph/GIT/templates/bib/references.bib
-csl: /Users/joseph/GIT/templates/csl/camb-a.csl
+csl: /Users/joseph/GIT/templates/csl/apa-7.csl
 ---
 
 
@@ -340,6 +340,17 @@ Single World Intervention Graphs (SWIGs) help us understand why bias correction 
 @tbl-tblswigme$\mathcal{G}_{1.1}$ shows how to represent the true counterfactual outcome as a function $Y(\mathbf{h}(E^A, B(\tilde{a})))$. If this function were known, we could intervene to correct the bias in reporter $B$ when $A = \tilde{a}$ to obtain $Y(\tilde{a})$. The dotted green arrows indicate the counterfactual variables whose functional relationship to the observed values $B(\tilde{a})$ are relevant for correcting this bias. Like an optometrist fitting spectacles to correct vision, knowing how $B(\tilde{a})$ relates to $E^A$ would allow us to recover $A = \tilde{a}$ from $B(\tilde{a})$ and thus obtain $\mathbb{E}[Y(\tilde{a})]$ from $\mathbb{E}[Y(B(\tilde{a}))]$.
 
 Similarly, @tbl-tblswigme$\mathcal{G}_{1.2}$ shows how to represent the true counterfactual outcome as a function $V(\mathbf{h}(E^Y, V(\tilde{a})))$. If this function were known, we could intervene to correct the bias of outcome reporter $V(\tilde{a})$ when $A = \tilde{a}$ to recover the true state $Y(\tilde{a})$ from its distorted representation in $V(\tilde{a})$. The dotted green arrows indicate the counterfactual variables relevant for correcting this bias. Knowing how $V(\tilde{a})$ relates to $E^Y$ would allow us to recover $Y(\tilde{a})$ from $V(\tilde{a})$.
+
+
+::: {#tbl-tblswigmex}
+```{=latex}
+\tblswigmex
+```
+Single World Intervention Graph reveals strategies for redressing measurement error when errors are directed or correlated.
+:::
+
+
+
 
 @tbl-tblswigmex$\mathcal{G}_{1.1-1.2}$ reveals that obtaining corrections for biased reporters requires additional information when there is a directed measurement error. In this setting, bias correction requires knowledge of a function in which the treatment and unmeasured sources of error interact to distort reported potential outcomes under treatment. The SWIG shows that directed measurement error bias can occur if the treatment affects the outcome reporter, even without a direct effect of the treatment on the error terms of the outcome reporter.
 
