--- a/manuscripts/24-accepted-ehs/part-3-measurement/s1-part-3-measurement.tex
+++ b/manuscripts/24-accepted-ehs/part-3-measurement/s1-part-3-measurement.tex
@@ -237,7 +237,7 @@ Interaction, Mediation, and Time-Varying Treatments''}
       
 
 
-\date{2024-06-12}
+\date{2024-06-19}
 \begin{document}
 \maketitle
 
@@ -327,11 +327,10 @@ such that: \[ \widehat{ATE}_{T} = f(n_S, R) \]
 
 Finding a suitable function \(f\) is the central challenge in adjusting
 for sampling bias and achieving transportability
-(\citeproc{ref-bareinboim2013general}{Bareinboim and Pearl 2013};
-\citeproc{ref-dahabreh2019generalizing}{Dahabreh \emph{et al.} 2019};
-\citeproc{ref-deffner2022}{Deffner \emph{et al.} 2022};
-\citeproc{ref-westreich2017transportability}{Westreich \emph{et al.}
-2017}).
+(\citeproc{ref-bareinboim2013general}{Bareinboim \& Pearl, 2013};
+\citeproc{ref-dahabreh2019generalizing}{Dahabreh et al., 2019};
+\citeproc{ref-deffner2022}{Deffner et al., 2022};
+\citeproc{ref-westreich2017transportability}{Westreich et al., 2017}).
 
 \newpage{}
 
@@ -413,10 +412,9 @@ guarantee that:
 The equality of marginal effects between the two populations will only
 hold if there is a universal null effect (i.e., no effect of the
 exposure on the outcome for any individual) across all units, by chance,
-or under specific conditions discussed by VanderWeele and Robins
+or under specific conditions discussed by VanderWeele \& Robins
 (\citeproc{ref-vanderweele2007}{2007}) and further elucidated by Suzuki
-\emph{et al.} (\citeproc{ref-suzuki2013counterfactual}{2013}).
-Otherwise:
+et al. (\citeproc{ref-suzuki2013counterfactual}{2013}). Otherwise:
 
 \[ \Delta_{\text{uncensored}} \ne \Delta_{\text{censored}} \]
 
@@ -431,8 +429,8 @@ or
 \[ \Delta^{\text{difference}}_{\text{uncensored}} \ne \Delta^{\text{difference}}_{\text{censored}} \]
 
 For comprehensive discussions on sampling and inference, refer to
-Dahabreh and Hernán (\citeproc{ref-dahabreh2019}{2019}) and Dahabreh
-\emph{et al.} (\citeproc{ref-dahabreh2021study}{2021}).
+Dahabreh \& Hernán (\citeproc{ref-dahabreh2019}{2019}) and Dahabreh et
+al. (\citeproc{ref-dahabreh2021study}{2021}).
 
 \newpage{}
 
@@ -442,11 +440,11 @@ Population}\label{id-app-d}
 
 First, we load the \texttt{stdReg} library, which obtains marginal
 effect estimates by simulating counterfactuals under different levels of
-treatment (\citeproc{ref-sjuxf6lander2016}{Sjölander 2016}). If a
+treatment (\citeproc{ref-sjuxf6lander2016}{Sjölander, 2016}). If a
 treatment is continuous, the levels can be specified.
 
 We also load the \texttt{parameters} library, which creates nice tables
-(\citeproc{ref-parameters2020}{Lüdecke \emph{et al.} 2020}).
+(\citeproc{ref-parameters2020}{Lüdecke et al., 2020}).
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -790,7 +788,7 @@ target population.
   counterfactual outcome} --- what would have happened to the missing
   participants had they not been lost to follow-up or had they
   responded? The joint distributions over `full data' are inherently
-  unobservable (\citeproc{ref-vanderlaan2011}{Van Der Laan and Rose
+  unobservable (\citeproc{ref-vanderlaan2011}{Van Der Laan \& Rose,
   2011}).
 \item
   \textbf{In simple settings, like the one we just simulated, we can
@@ -798,8 +796,8 @@ target population.
   such as modelling the censoring (e.g., censoring weighting).} However,
   we never know what setting we are in or whether it is simple---such
   modelling must be handled carefully. There is a large and growing
-  epidemiology literature on this topic (see, for example, Li \emph{et
-  al.} (\citeproc{ref-li2023non}{2023})).
+  epidemiology literature on this topic (see, for example, Li et al.
+  (\citeproc{ref-li2023non}{2023})).
 \end{itemize}
 
 \newpage{}
@@ -848,7 +846,21 @@ arrows indicate the counterfactual variables relevant for correcting
 this bias. Knowing how \(V(\tilde{a})\) relates to \(E^Y\) would allow
 us to recover \(Y(\tilde{a})\) from \(V(\tilde{a})\).
 
-\textbf{?@tbl-tblswigmex}\(\mathcal{G}_{1.1-1.2}\) reveals that
+\begin{table}
+
+\caption{\label{tbl-tblswigmex}Single World Intervention Graph reveals
+strategies for redressing measurement error when errors are directed or
+correlated.}
+
+\centering{
+
+\tblswigmex
+
+}
+
+\end{table}%
+
+Table~\ref{tbl-tblswigmex}\(\mathcal{G}_{1.1-1.2}\) reveals that
 obtaining corrections for biased reporters requires additional
 information when there is a directed measurement error. In this setting,
 bias correction requires knowledge of a function in which the treatment
@@ -858,7 +870,7 @@ bias can occur if the treatment affects the outcome reporter, even
 without a direct effect of the treatment on the error terms of the
 outcome reporter.
 
-\textbf{?@tbl-tblswigmex}\(\mathcal{G}_{2.1-2.2}\) clarifies that
+Table~\ref{tbl-tblswigmex}\(\mathcal{G}_{2.1-2.2}\) clarifies that
 correlated biases in the errors of the treatment and outcome reporters
 create additional demands for measurement error correction. The
 behaviour of the correlated error must be evaluated for both
@@ -921,9 +933,8 @@ biases):
   However, if the functions that lead to differences between unobserved
   variables of interest and their reporters are known, investigators can
   correct for such differences by reweighting the data or applying
-  direct corrections (\citeproc{ref-carroll2006measurement}{Carroll
-  \emph{et al.} 2006}; \citeproc{ref-lash2009applying}{Lash \emph{et
-  al.} 2009}).
+  direct corrections (\citeproc{ref-carroll2006measurement}{Carroll et
+  al., 2006}; \citeproc{ref-lash2009applying}{Lash et al., 2009}).
 \item
   Certain population restriction biases can be viewed as varieties of
   measurement error bias, as discussed in the main articles \textbf{Part
@@ -942,7 +953,7 @@ biases):
   Single World Intervention Graphs to show that both biases may operate
   together and in conjunction with confounding biases. We would add
   effect modifier nodes to the SWIGs in Table~\ref{tbl-tblswigme} and
-  \textbf{?@tbl-tblswigmex}.
+  Table~\ref{tbl-tblswigmex}.
 \item
   Despite the utility of Single World Intervention Graphs (and causal
   DAGs) for clarifying structural features of bias, whether confounding
@@ -958,93 +969,91 @@ biases):
 \phantomsection\label{refs}
 \begin{CSLReferences}{1}{0}
 \bibitem[\citeproctext]{ref-bareinboim2013general}
-Bareinboim, E, and Pearl, J (2013) A general algorithm for deciding
+Bareinboim, E., \& Pearl, J. (2013). A general algorithm for deciding
 transportability of experimental results. \emph{Journal of Causal
-Inference}, \textbf{1}(1), 107--134.
+Inference}, \emph{1}(1), 107--134.
 
 \bibitem[\citeproctext]{ref-margot2024}
-Bulbulia, JA (2024) \emph{Margot: MARGinal observational
-treatment-effects}.
-doi:\href{https://doi.org/10.5281/zenodo.10907724}{10.5281/zenodo.10907724}.
+Bulbulia, J. A. (2024). \emph{Margot: MARGinal observational
+treatment-effects}. \url{https://doi.org/10.5281/zenodo.10907724}
 
 \bibitem[\citeproctext]{ref-carroll2006measurement}
-Carroll, RJ, Ruppert, D, Stefanski, LA, and Crainiceanu, CM (2006)
-\emph{Measurement error in nonlinear models: A modern perspective},
-Chapman; Hall/CRC.
+Carroll, R. J., Ruppert, D., Stefanski, L. A., \& Crainiceanu, C. M.
+(2006). \emph{Measurement error in nonlinear models: A modern
+perspective}. Chapman; Hall/CRC.
 
 \bibitem[\citeproctext]{ref-dahabreh2021study}
-Dahabreh, IJ, Haneuse, SJA, Robins, JM, \ldots{} Hernán, MA (2021) Study
-designs for extending causal inferences from a randomized trial to a
-target population. \emph{American Journal of Epidemiology},
-\textbf{190}(8), 1632--1642.
+Dahabreh, I. J., Haneuse, S. J. A., Robins, J. M., Robertson, S. E.,
+Buchanan, A. L., Stuart, E. A., \& Hernán, M. A. (2021). Study designs
+for extending causal inferences from a randomized trial to a target
+population. \emph{American Journal of Epidemiology}, \emph{190}(8),
+1632--1642.
 
 \bibitem[\citeproctext]{ref-dahabreh2019}
-Dahabreh, IJ, and Hernán, MA (2019) Extending inferences from a
+Dahabreh, I. J., \& Hernán, M. A. (2019). Extending inferences from a
 randomized trial to a target population. \emph{European Journal of
-Epidemiology}, \textbf{34}(8), 719--722.
-doi:\href{https://doi.org/10.1007/s10654-019-00533-2}{10.1007/s10654-019-00533-2}.
+Epidemiology}, \emph{34}(8), 719--722.
+\url{https://doi.org/10.1007/s10654-019-00533-2}
 
 \bibitem[\citeproctext]{ref-dahabreh2019generalizing}
-Dahabreh, IJ, Robins, JM, Haneuse, SJ, and Hernán, MA (2019)
+Dahabreh, I. J., Robins, J. M., Haneuse, S. J., \& Hernán, M. A. (2019).
 Generalizing causal inferences from randomized trials: Counterfactual
 and graphical identification. \emph{arXiv Preprint arXiv:1906.10792}.
 
 \bibitem[\citeproctext]{ref-deffner2022}
-Deffner, D, Rohrer, JM, and McElreath, R (2022) A Causal Framework for
-Cross-Cultural Generalizability. \emph{Advances in Methods and Practices
-in Psychological Science}, \textbf{5}(3), 25152459221106366.
-doi:\href{https://doi.org/10.1177/25152459221106366}{10.1177/25152459221106366}.
+Deffner, D., Rohrer, J. M., \& McElreath, R. (2022). A Causal Framework
+for Cross-Cultural Generalizability. \emph{Advances in Methods and
+Practices in Psychological Science}, \emph{5}(3), 25152459221106366.
+\url{https://doi.org/10.1177/25152459221106366}
 
 \bibitem[\citeproctext]{ref-lash2009applying}
-Lash, TL, Fox, MP, and Fink, AK (2009) \emph{Applying quantitative bias
-analysis to epidemiologic data}, Springer.
+Lash, T. L., Fox, M. P., \& Fink, A. K. (2009). \emph{Applying
+quantitative bias analysis to epidemiologic data}. Springer.
 
 \bibitem[\citeproctext]{ref-li2023non}
-Li, W, Miao, W, and Tchetgen Tchetgen, E (2023) Non-parametric inference
-about mean functionals of non-ignorable non-response data without
-identifying the joint distribution. \emph{Journal of the Royal
-Statistical Society Series B: Statistical Methodology}, \textbf{85}(3),
+Li, W., Miao, W., \& Tchetgen Tchetgen, E. (2023). Non-parametric
+inference about mean functionals of non-ignorable non-response data
+without identifying the joint distribution. \emph{Journal of the Royal
+Statistical Society Series B: Statistical Methodology}, \emph{85}(3),
 913--935.
 
 \bibitem[\citeproctext]{ref-parameters2020}
-Lüdecke, D, Ben-Shachar, MS, Patil, I, and Makowski, D (2020)
+Lüdecke, D., Ben-Shachar, M. S., Patil, I., \& Makowski, D. (2020).
 Extracting, computing and exploring the parameters of statistical models
-using {R}. \emph{Journal of Open Source Software}, \textbf{5}(53), 2445.
-doi:\href{https://doi.org/10.21105/joss.02445}{10.21105/joss.02445}.
+using {R}. \emph{Journal of Open Source Software}, \emph{5}(53), 2445.
+\url{https://doi.org/10.21105/joss.02445}
 
 \bibitem[\citeproctext]{ref-sjuxf6lander2016}
-Sjölander, A (2016) Regression standardization with the R package
-stdReg. \emph{European Journal of Epidemiology}, \textbf{31}(6),
-563--574.
-doi:\href{https://doi.org/10.1007/s10654-016-0157-3}{10.1007/s10654-016-0157-3}.
+Sjölander, A. (2016). Regression standardization with the R package
+stdReg. \emph{European Journal of Epidemiology}, \emph{31}(6), 563--574.
+\url{https://doi.org/10.1007/s10654-016-0157-3}
 
 \bibitem[\citeproctext]{ref-suzuki2013counterfactual}
-Suzuki, E, Mitsuhashi, T, Tsuda, T, and Yamamoto, E (2013) A
+Suzuki, E., Mitsuhashi, T., Tsuda, T., \& Yamamoto, E. (2013). A
 counterfactual approach to bias and effect modification in terms of
-response types. \emph{BMC Medical Research Methodology}, \textbf{13}(1),
+response types. \emph{BMC Medical Research Methodology}, \emph{13}(1),
 1--17.
 
 \bibitem[\citeproctext]{ref-vanderlaan2011}
-Van Der Laan, MJ, and Rose, S (2011) \emph{Targeted Learning: Causal
-Inference for Observational and Experimental Data}, New York, NY:
-Springer. Retrieved from
+Van Der Laan, M. J., \& Rose, S. (2011). \emph{Targeted Learning: Causal
+Inference for Observational and Experimental Data}. Springer.
 \url{https://link.springer.com/10.1007/978-1-4419-9782-1}
 
 \bibitem[\citeproctext]{ref-vanderweele2012}
-VanderWeele, TJ (2012) Confounding and Effect Modification: Distribution
-and Measure. \emph{Epidemiologic Methods}, \textbf{1}(1), 55--82.
-doi:\href{https://doi.org/10.1515/2161-962X.1004}{10.1515/2161-962X.1004}.
+VanderWeele, T. J. (2012). Confounding and Effect Modification:
+Distribution and Measure. \emph{Epidemiologic Methods}, \emph{1}(1),
+55--82. \url{https://doi.org/10.1515/2161-962X.1004}
 
 \bibitem[\citeproctext]{ref-vanderweele2007}
-VanderWeele, TJ, and Robins, JM (2007) Four types of effect
+VanderWeele, T. J., \& Robins, J. M. (2007). Four types of effect
 modification: a classification based on directed acyclic graphs.
-\emph{Epidemiology (Cambridge, Mass.)}, \textbf{18}(5), 561--568.
-doi:\href{https://doi.org/10.1097/EDE.0b013e318127181b}{10.1097/EDE.0b013e318127181b}.
+\emph{Epidemiology (Cambridge, Mass.)}, \emph{18}(5), 561--568.
+\url{https://doi.org/10.1097/EDE.0b013e318127181b}
 
 \bibitem[\citeproctext]{ref-westreich2017transportability}
-Westreich, D, Edwards, JK, Lesko, CR, Stuart, E, and Cole, SR (2017)
-Transportability of trial results using inverse odds of sampling
-weights. \emph{American Journal of Epidemiology}, \textbf{186}(8),
+Westreich, D., Edwards, J. K., Lesko, C. R., Stuart, E., \& Cole, S. R.
+(2017). Transportability of trial results using inverse odds of sampling
+weights. \emph{American Journal of Epidemiology}, \emph{186}(8),
 1010--1014.
 
 \end{CSLReferences}
