--- a/manuscripts/24-accepted-ehs/part-4-experiments/part-4-experiments.qmd
+++ b/manuscripts/24-accepted-ehs/part-4-experiments/part-4-experiments.qmd
@@ -43,7 +43,7 @@ execute:
   eval: true
 fontfamily: libertinus
 bibliography: /Users/joseph/GIT/templates/bib/references.bib
-csl: /Users/joseph/GIT/templates/csl/camb-a.csl
+csl: /Users/joseph/GIT/templates/csl/apa-7.csl
 ---
 
 
@@ -123,9 +123,9 @@ No.
 
 Assume large sample sizes to minimise random differences in variable distribution. Assume that the experimental trials are double-blind, with consistent treatment conditions across all arms, applied by meticulous investigators. Assume no chance event, other than randomisation. Finally, assume that the target population is not restricted in the sample population, ensuring that the experiments, if internally valid, will generalise. Assume no measurement error in the measures.
 
-Nevertheless, confounding biases can arise. Here, I use eight examples to illustrate common risks. Whereas some risks arise from common flaws in experimental designs, such as post-randomisation selection criteria and post-randomisation covariate adjustment, hazards in estimating the 'per-protocol effect' of treatments do not arise from design errors. These typically require the use of methods for causal inference in 'real world' observational studies. The eight examples demonstrate the utility of causal directed acyclic graphs (causal DAGs) for easing the cognitive demand in diagnosing confounding bias in experimental designs. Overall, understanding how confounding occurs is crucial for experimental design, data analysis, and inference, demonstrating the utility of causal inference methods for diagnosing and addressing vulnerabilities in randomised experimental designs.
+Nevertheless, biases can arise. Here, I use eight examples to illustrate common threats to valid causal inferences arising in experiments. Whereas certain risks arise from common flaws in experimental designs, such as post-randomisation selection criteria and post-randomisation covariate adjustment, hazards in estimating the 'per-protocol effect' of treatments do not arise from design errors. These typically require the use of methods for causal inference in 'real world' observational studies. The eight examples demonstrate the utility of causal directed acyclic graphs (causal DAGs) for easing the cognitive demand in diagnosing confounding bias in experimental designs. Overall, understanding how confounding occurs is crucial for experimental design, data analysis, and inference, demonstrating the utility of causal inference methods for diagnosing and addressing vulnerabilities in randomised experimental designs.
 
-We begin by defining our terms. Supplementary materials **S1** provides a glossary of general terms used in causal inference.
+We begin by defining our terms. Note that supplementary materials **S1** provides a glossary of general terms used in causal inference.
 
 ### Terminology
 
@@ -146,7 +146,7 @@ When evaluating evidence for causality, investigators should specify whether the
 
 We use the following conventions in our directed acyclic graphs:
 
-- **Node**: A node or vertex represents characteristics or features of units within a population on a causal diagram -- that is, a 'variable.' In causal directed acyclic graphs, we draw nodes with respect to the *target population*, which is the population for whom investigators seek causal inferences [@suzuki2020]. A time-indexed node $X_t$ denotes relative chronology; $X_{\phi t}$ indicates assumed timing, possibly erroneous. 
+- **Node**: A node or vertex represents characteristics or features of units within a population on a causal diagram -- that is, a 'variable'. In causal directed acyclic graphs, we draw nodes with respect to the *target population*, which is the population for whom investigators seek causal inferences [@suzuki2020]. A time-indexed node $X_t$ denotes relative chronology; $X_{\phi t}$ indicates assumed timing, possibly erroneous. 
 
 - **Edge without an Arrow** ($\association$): Path of association, causality not asserted.
 
@@ -231,7 +231,6 @@ We use causal directed acyclic graphs to describe eight types of confounding bia
 ### Example 1: Post-treatment Adjustment Blocks Treatment Effect
 
 @tbl-terminologyelconfoundersexperiments $\mathcal{G}_{1.1}$ illustrates the threat of confounding bias by conditioning on a post-treatment mediator [@montgomery2018, @mcelreath2020]. Imagine investigators are interested in whether the framing of an authority as religious or secular -- 'source framing' -- affects subjective ratings of confidence in the authority -- 'source credibility.' There are two conditions. A claim is presented from an authority. The content of the claim does not vary by condition. Participants are asked to rate the claim on a credibility scale. Next, imagine that the investigators decide they should control for religiosity. Furthermore, imagine there is a true effect of source framing. Finally, assume that the source framing not only affects source credibility but also affects religiosity. Perhaps viewing a religious authority makes religious people more religious. In this scenario, measuring religiosity following the experimental intervention will partially block the effect of the treatment on the outcome. It might make it appear that the treatment does not work for religious people, when in reality it works because it amplifies religiosity. (Note that in this graph we assume that $L_1$ occurs before $Y_2$, however, investigators may have measured $L_1$ after $Y_2$. Our time index pertains to the occurrence of the event, not to its measurement. This statement applies to all examples that follow.)
-
 @tbl-terminologyelconfoundersexperiments $\mathcal{G}_{1.2}$ clarifies a response: do not control post-treatment variables, here the intermediary effects of 'religiosity'. If effect-modification by religiosity is scientifically interesting, measure religiosity before randomisation. Randomisation did not prevent confounding.
 
 ### Example 2: Post-treatment Adjustment Induces Collider Stratification Bias
@@ -257,9 +256,9 @@ The point that investigators should not condition on post-treatment variables ca
 
 ### Example 5: Treatment Affects Attrition Biasing Measure of Outcome
 
-@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{5}$ Suppose that the experimental condition affects measurement error in self-reported source credibility $U_{\Delta Y}$. For example, suppose that source framing has no effect on credibility. However, those in the scientific authority condition are more likely to express credibility for science due to self-presentation bias. Likewise, perceiving the investigators to be irreligious, participants in the religious source framing condition might report less credibility for religious authorities than they secretly harbour. Directed measurement error from the treatment to the measurement error of the outcomes creates an association without true causality, which we denote by removing any arrow between the treatment $A$ and the true outcome $Y$.
+@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{5}$ Suppose that the experimental condition affects measurement error in self-reported source credibility $U_{\Delta Y}$. For example, suppose that source framing has no effect on credibility. However, those in the scientific authority condition are more likely to express credibility for science due to self-presentation bias. Likewise, perceiving the investigators to be irreligious, participants in the religious source framing condition might report less credibility for religious authorities than they secretly harbour. Directed measurement error from the treatment to the measurement error of the outcomes creates an association without true causality, which we denote by removing any arrow between the treatment $A$ and the true outcome $Y$. Note that the bias in this setting is not one of cnfounding bias. There is no common cause of treatment and outcome. Rather, the threat is from measurement error bias [refer to @bulbulia2024wierd]
 
-@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{5}$ suggests there is no easy solution to directed measurement error bias in this setting. If the magnitude of the bias were known, investigators could apply adjustments [@lash2009applying]. Additional experiments might be devised that are insensitive to directed measurement error bias. Investigators might compute sensitivity analyses to examine how much measurement error bias would be required to explain away a result (refer to @linden2020EVALUE for a relatively easy-to-implement sensitivity analysis). The point we make here is that randomisation does not prevent confounding by directed measurement error bias. Investigators must be vigilant.
+@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{5}$ suggests there is no easy solution to directed measurement error bias in this setting. If the magnitude of the measurement error bias were known, investigators could apply adjustments [@lash2009applying]. Additional experiments might be devised that are less prone to directed measurement error bias. Investigators might compute sensitivity analyses to examine how much measurement error bias would be required to explain away a result (refer to @linden2020EVALUE for a relatively easy-to-implement sensitivity analysis). The point we make here is that randomisation does not prevent bias arising from directed measurement error. Investigators must be vigilant. 
 
 
 ### Example 6: Per Protocol Effect Lost in Sustained Treatments Where Treatment Adherence Is Affected by a Measured Confounder
@@ -276,7 +275,7 @@ Setting aside self-inflicted injuries of post-treatment conditioning and directe
 @tbl-terminologyelconfoundersexperiments $\mathcal{G}_{7}$ illustrates the threat for identifying the per-protocol effect in sustained treatments where past treatments affect measured confounder of future treatment adherence.  Suppose that yoga affects flexibility. We should condition on pre-treatment measures of flexibility to identify the per-protocol effect. However, conditioning on the post-treatment measure of flexibility, $\boxed{L_1}$ induces collider stratification bias. This path runs from $A_1 \associationred L_1 \associationred U \associationred Y_3$. However, if we do not condition on $L_1$ there is an open backdoor path from $A_1 \associationred U \associationred Y_3$.  We cannot estimate a per-protocol effect by conditioning strategies.  
 
 
-@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{7}$ does not clarify the response.  However, in a sequential treatment with fixed strategies, in which there is sequential exchangeability -- or no unmeasured confounding at each time point -- valid estimators for the sequential treatments may be constructed (refer to @hernan2024WHATIF; @diaz2021nonparametric; @hoffman2023). Although we may naively obtain an intention-to-treat effect estimate without special methods, inferring an effect of doing yoga on well-being -- the per-protocol effect, requires special methods. These methods are not routinely used in the human sciences. 
+@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{7}$ suggests no easy remedy for obtaining valid causal inference in this setting.  However, in a sequential treatment with fixed strategies, in which there is sequential exchangeability -- or no unmeasured confounding at each time point -- valid estimators for the sequential treatments may be constructed (refer to @hernan2024WHATIF; @diaz2021nonparametric; @hoffman2023). Although we may naively obtain an intention-to-treat effect estimate without special methods, inferring an effect of doing yoga on well-being -- the per-protocol effect, requires special methods. Such methods are not yet routinely used in the human sciences [@bulbulia2024swigstime]. 
 
 
 ### Example 8: Per Protocol Effect Lost in Sustained Treatments Because Both Measured and Unmeasured Confounders Affect Treatment Adherence
@@ -285,9 +284,9 @@ Setting aside self-inflicted injuries of post-treatment conditioning and directe
 
 If there were no effect of yoga on well-being except through flexibility, and furthermore if flexibility were not affected by the unmeasured antipathy toward Eastern spiritual practices, and further, if the effect of flexibility on yoga at each time point were conditionally independent of all future counterfactual data, both for the treatments and the outcomes, then it might be possible to construct special estimators that identify the per-protocol effect of yoga on well-being in the presence of unmeasured confounding that affects adherence (refer to @hernan2017per). These special estimators are quite different from the ANOVAs, regressions models, and multi-level regression models routinely deployed in experimental studies. However, if we seek to understand the effect of yoga on well-being and not the effect of random assignment to yoga on well-being the routine estimators will not work: we require special estimators [@hernan2024WHATIF; @hoffman2023; @diaz2023lmtp].
 
-## Conclusions
+## Summary
 
-The examples considered here do not exhaust all threats to causal inference in experiments. For example, I have not covered biases arising from sample attrition (refer to @bulbulia2024wierd). However, I hope the eight examples presented persuade experimental investigators of the following:
+The examples considered here do not exhaust all threats to causal inference in experiments. For example, I have not covered biases arising from sample attrition also known as right censoring bias (refer to @bulbulia2024wierd). However, I hope the eight examples presented persuade experimental investigators of the following:
 
 First, there is no need to adjust for baseline confounders in a non-sequential randomised experiment. Although an unadjusted difference of means should be reported, Lin has shown that if a study is sufficiently powered, regression adjustment where the full set of treatments are interacted with baseline covariates may improve (and will not diminish) asymptotic precision [@lin2012regressexperiments]. In some settings, investigators will want to evaluate effect modification with strata of covariates at baseline. However, in sufficiently large samples, randomisation ensures balance.
 
@@ -309,15 +308,32 @@ From these observations, we offer the following practical advice:
 7. Where possible, report both the per-protocol effect and the intention-to-treat effect.
 
 
-In a separate work, I considered bias arising from attrition in the absence of confounding when treatment assignment is randomised [@bulbulia2024wierd]. Describing the special methods for estimating per-protocol effects with multiple sequential treatments is beyond the scope of this commentary [@hernan2024WHATIF]. My aim has been to demonstrate that satisfying the assumptions for valid causal inferences in experiments is often more challenging than many experimental human scientists currently realize [refer to @montgomery2018].
+Describing the special methods for estimating per-protocol effects with multiple sequential treatments is beyond the scope of this commentary [@hernan2024WHATIF]. My aim has been to demonstrate that satisfying the assumptions for valid causal inferences in experiments is often more challenging than many experimental human scientists currently realise [refer to @montgomery2018].
 
-For example, I was part of an international team that administered questionnaires about religious identification following randomisation in a cross-cultural study investigating the source-credibility of religious and scientific authority [@hoogeveen2022einstein]. This approach might have attenuated effect modification by religiosity. Causal inference methods have significant potential to enhance the design, analysis, and interpretation of experimental research, including my own work.
+For example, I was part of an international team that administered questionnaires about religious identification following randomisation in a cross-cultural study investigating the source-credibility of religious and scientific authority [@hoogeveen2022einstein]. This approach might have attenuated effect modification by religiosity. Causal inference methods have considerable potential to enhance the design, analysis, and interpretation of experimental research, including my own work.
 
 {{< pagebreak >}}
 
-## Funding
+## Acknowledgements
 
-This work is supported by a grant from the Templeton Religion Trust (TRT0418) and RSNZ Marsden 3721245, 20-UOA-123; RSNZ 19-UOO-090. I also received support from the Max Planck Institute for the Science of Human History. The Funders had no role in preparing the manuscript or the decision to publish it.
+I am grateful to Charles Efferson and Ruth Mace for constructive feedback. 
+
+Errors are my own.
+
+
+## Conflict of Interest
+
+The author declares no conflicts of interest
+
+
+## Financial Support
+
+This work is supported by a grant from the Templeton Religion Trust (TRT0418) and RSNZ Marsden 3721245, 20-UOA-123; RSNZ 19-UOO-090. I also received support from the Max Planck Institute for the Science of Human History. The Funders had no role in preparing the manuscript or deciding to publish it.
+
+
+## Research Transparency and Reproducibility
+
+No data were used in this manuscript.
 
 
 
@@ -327,5 +343,6 @@ This work is supported by a grant from the Templeton Religion Trust (TRT0418) an
 
 ::: {#refs}
 :::
+
 
 
