--- a/manuscripts/24-accepted-ehs/part-4-experiments/part-4-experiments.tex
+++ b/manuscripts/24-accepted-ehs/part-4-experiments/part-4-experiments.tex
@@ -210,7 +210,7 @@
       
 
 
-\date{2024-06-13}
+\date{2024-06-19}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -247,22 +247,24 @@ Finally, assume that the target population is not restricted in the
 sample population, ensuring that the experiments, if internally valid,
 will generalise. Assume no measurement error in the measures.
 
-Nevertheless, confounding biases can arise. Here, I use eight examples
-to illustrate common risks. Whereas some risks arise from common flaws
-in experimental designs, such as post-randomisation selection criteria
-and post-randomisation covariate adjustment, hazards in estimating the
-`per-protocol effect' of treatments do not arise from design errors.
-These typically require the use of methods for causal inference in `real
-world' observational studies. The eight examples demonstrate the utility
-of causal directed acyclic graphs (causal DAGs) for easing the cognitive
-demand in diagnosing confounding bias in experimental designs. Overall,
+Nevertheless, biases can arise. Here, I use eight examples to illustrate
+common threats to valid causal inferences arising in experiments.
+Whereas certain risks arise from common flaws in experimental designs,
+such as post-randomisation selection criteria and post-randomisation
+covariate adjustment, hazards in estimating the `per-protocol effect' of
+treatments do not arise from design errors. These typically require the
+use of methods for causal inference in `real world' observational
+studies. The eight examples demonstrate the utility of causal directed
+acyclic graphs (causal DAGs) for easing the cognitive demand in
+diagnosing confounding bias in experimental designs. Overall,
 understanding how confounding occurs is crucial for experimental design,
 data analysis, and inference, demonstrating the utility of causal
 inference methods for diagnosing and addressing vulnerabilities in
 randomised experimental designs.
 
-We begin by defining our terms. Supplementary materials \textbf{S1}
-provides a glossary of general terms used in causal inference.
+We begin by defining our terms. Note that supplementary materials
+\textbf{S1} provides a glossary of general terms used in causal
+inference.
 
 \subsubsection{Terminology}\label{terminology}
 
@@ -279,7 +281,7 @@ provides a glossary of general terms used in causal inference.
 \item
   \textbf{Per-protocol effect}: The effect of adherence to a randomly
   assigned treatment if adherence were perfect
-  (\citeproc{ref-hernan2017per}{Hernán \emph{et al.} 2017}). We have no
+  (\citeproc{ref-hernan2017per}{Hernán et al., 2017}). We have no
   guarantee that the intention-to-treat effect will be the same as the
   per-protocol effect. A safe assumption is that:
 \end{itemize}
@@ -292,10 +294,10 @@ When evaluating evidence for causality, investigators should specify
 whether they are estimating an intention-to-treat or per-protocol
 effect. They should do this in addition to stating a causal contrast,
 effect measure, and target population,
-(\citeproc{ref-hernuxe1n2004}{Hernán 2004};
-\citeproc{ref-tripepi2007}{Tripepi \emph{et al.} 2007}) and to
-evaluating sources of measurement error bias
-(\citeproc{ref-bulbulia2024wierd}{Bulbulia 2024 (in press)b}).
+(\citeproc{ref-hernuxe1n2004}{Hernán, 2004};
+\citeproc{ref-tripepi2007}{Tripepi et al., 2007}) and to evaluating
+sources of measurement error bias
+(\citeproc{ref-bulbulia2024wierd}{Bulbulia, 2024b}).
 
 \subsubsection{Meaning of Symbols}\label{meaning-of-symbols}
 
@@ -305,12 +307,12 @@ We use the following conventions in our directed acyclic graphs:
 \item
   \textbf{Node}: A node or vertex represents characteristics or features
   of units within a population on a causal diagram -- that is, a
-  `variable.' In causal directed acyclic graphs, we draw nodes with
+  `variable'. In causal directed acyclic graphs, we draw nodes with
   respect to the \emph{target population}, which is the population for
   whom investigators seek causal inferences
-  (\citeproc{ref-suzuki2020}{Suzuki \emph{et al.} 2020}). A time-indexed
-  node \(X_t\) denotes relative chronology; \(X_{\phi t}\) indicates
-  assumed timing, possibly erroneous.
+  (\citeproc{ref-suzuki2020}{Suzuki et al., 2020}). A time-indexed node
+  \(X_t\) denotes relative chronology; \(X_{\phi t}\) indicates assumed
+  timing, possibly erroneous.
 \item
   \textbf{Edge without an Arrow} (\(\association\)): Path of
   association, causality not asserted.
@@ -367,13 +369,13 @@ causality from which all causal directed acyclic graphs can be built.}
 
 Pearl demonstrated that causal dependencies could be evaluated by
 linking observable probability distributions to directed acyclic graphs
-(\citeproc{ref-pearl1995}{Pearl 1995}, \citeproc{ref-pearl2009a}{2009}).
-This means that, based on assumptions about causal structure,
-investigators could investigate strategies for identifying causal
-effects from the joint distributions of observed data. The graphical
-rules that Pearl developed and proved are known as the rules of
-d-separation (\citeproc{ref-pearl1995}{Pearl 1995}), and are presented
-in Table~\ref{tbl-fiveelementary}.
+(\citeproc{ref-pearl1995}{Pearl, 1995},
+\citeproc{ref-pearl2009a}{2009}). This means that, based on assumptions
+about causal structure, investigators could investigate strategies for
+identifying causal effects from the joint distributions of observed
+data. The graphical rules that Pearl developed and proved are known as
+the rules of d-separation (\citeproc{ref-pearl1995}{Pearl, 1995}), and
+are presented in Table~\ref{tbl-fiveelementary}.
 
 The rules of d-separation are as follows:
 
@@ -386,7 +388,7 @@ The rules of d-separation are as follows:
 The rules of d-separation give rise to the backdoor criterion which
 provides an identification algorithm conditional on the structural
 assumptions encoded in a causal directed acyclic graph
-(\citeproc{ref-pearl1995}{Pearl 1995}).
+(\citeproc{ref-pearl1995}{Pearl, 1995}).
 
 \textbf{Backdoor Adjustment}: In a causal directed acyclic graph, we say
 that a set of variables \(L\) satisfies the backdoor adjustment theorem
@@ -407,7 +409,7 @@ every path between \(A\) and \(Y\) that contains an arrow pointing into
 
 If \(L\) satisfies these conditions, we say the causal effect of \(A\)
 on \(Y\) is identified conditional on \(\boxed{L}\)
-(\citeproc{ref-pearl2009a}{Pearl 2009}).
+(\citeproc{ref-pearl2009a}{Pearl, 2009}).
 
 \subsection{Eight Examples of Confounding Bias in
 Experiments}\label{eight-examples-of-confounding-bias-in-experiments}
@@ -459,7 +461,6 @@ religiosity. (Note that in this graph we assume that \(L_1\) occurs
 before \(Y_2\), however, investigators may have measured \(L_1\) after
 \(Y_2\). Our time index pertains to the occurrence of the event, not to
 its measurement. This statement applies to all examples that follow.)
-
 Table~\ref{tbl-terminologyelconfoundersexperiments}
 \(\mathcal{G}_{1.2}\) clarifies a response: do not control
 post-treatment variables, here the intermediary effects of
@@ -474,10 +475,10 @@ Bias}\label{example-2-post-treatment-adjustment-induces-collider-stratification-
 Table~\ref{tbl-terminologyelconfoundersexperiments}
 \(\mathcal{G}_{2.1}\) illustrates the threat of confounding bias by
 conditioning on a post-treatment collider (\citeproc{ref-cole2010}{Cole
-\emph{et al.} 2010}). Imagine the same experiment as in Example 1 and
-the same conditioning strategy, where religiosity is measured following
-the treatment. We assume the treatment affects religiosity. However, in
-this example, religiosity has no causal effect on the outcome, source
+et al., 2010}). Imagine the same experiment as in Example 1 and the same
+conditioning strategy, where religiosity is measured following the
+treatment. We assume the treatment affects religiosity. However, in this
+example, religiosity has no causal effect on the outcome, source
 credibility. Finally, imagine an unmeasured variable affects both the
 mediator, religiosity (\(L_1\)), and the outcome, source credibility
 (\(Y_2\)). This unmeasured confounder might be religious education in
@@ -567,20 +568,24 @@ framing condition might report less credibility for religious
 authorities than they secretly harbour. Directed measurement error from
 the treatment to the measurement error of the outcomes creates an
 association without true causality, which we denote by removing any
-arrow between the treatment \(A\) and the true outcome \(Y\).
+arrow between the treatment \(A\) and the true outcome \(Y\). Note that
+the bias in this setting is not one of cnfounding bias. There is no
+common cause of treatment and outcome. Rather, the threat is from
+measurement error bias (refer to
+\citeproc{ref-bulbulia2024wierd}{Bulbulia, 2024b})
 
 Table~\ref{tbl-terminologyelconfoundersexperiments} \(\mathcal{G}_{5}\)
 suggests there is no easy solution to directed measurement error bias in
-this setting. If the magnitude of the bias were known, investigators
-could apply adjustments (\citeproc{ref-lash2009applying}{Lash \emph{et
-al.} 2009}). Additional experiments might be devised that are
-insensitive to directed measurement error bias. Investigators might
-compute sensitivity analyses to examine how much measurement error bias
-would be required to explain away a result (refer to Linden \emph{et
-al.} (\citeproc{ref-linden2020EVALUE}{2020}) for a relatively
-easy-to-implement sensitivity analysis). The point we make here is that
-randomisation does not prevent confounding by directed measurement error
-bias. Investigators must be vigilant.
+this setting. If the magnitude of the measurement error bias were known,
+investigators could apply adjustments
+(\citeproc{ref-lash2009applying}{Lash et al., 2009}). Additional
+experiments might be devised that are less prone to directed measurement
+error bias. Investigators might compute sensitivity analyses to examine
+how much measurement error bias would be required to explain away a
+result (refer to Linden et al. (\citeproc{ref-linden2020EVALUE}{2020})
+for a relatively easy-to-implement sensitivity analysis). The point we
+make here is that randomisation does not prevent bias arising from
+directed measurement error. Investigators must be vigilant.
 
 \subsubsection{Example 6: Per Protocol Effect Lost in Sustained
 Treatments Where Treatment Adherence Is Affected by a Measured
@@ -594,7 +599,7 @@ the treatments themselves. However, adherence is seldom perfect. The
 following examples reveal challenges for recovering per-protocol effects
 in settings where there is imperfect adherence.
 Table~\ref{tbl-terminologyelconfoundersexperiments}
-\(\mathcal{G}_{6-8}\) are adapted from Hernán \emph{et al.}
+\(\mathcal{G}_{6-8}\) are adapted from Hernán et al.
 (\citeproc{ref-hernan2017per}{2017}).
 
 Table~\ref{tbl-terminologyelconfoundersexperiments} \(\mathcal{G}_{6}\)
@@ -634,17 +639,18 @@ path from \(A_1 \associationred U \associationred Y_3\). We cannot
 estimate a per-protocol effect by conditioning strategies.
 
 Table~\ref{tbl-terminologyelconfoundersexperiments} \(\mathcal{G}_{7}\)
-does not clarify the response. However, in a sequential treatment with
-fixed strategies, in which there is sequential exchangeability -- or no
-unmeasured confounding at each time point -- valid estimators for the
-sequential treatments may be constructed (refer to Hernan and Robins
-(\citeproc{ref-hernan2024WHATIF}{2024}); Dı́az \emph{et al.}
-(\citeproc{ref-diaz2021nonparametric}{2021}); Hoffman \emph{et al.}
+suggests no easy remedy for obtaining valid causal inference in this
+setting. However, in a sequential treatment with fixed strategies, in
+which there is sequential exchangeability -- or no unmeasured
+confounding at each time point -- valid estimators for the sequential
+treatments may be constructed (refer to Hernan \& Robins
+(\citeproc{ref-hernan2024WHATIF}{2024}); Dı́az et al.
+(\citeproc{ref-diaz2021nonparametric}{2021}); Hoffman et al.
 (\citeproc{ref-hoffman2023}{2023})). Although we may naively obtain an
 intention-to-treat effect estimate without special methods, inferring an
 effect of doing yoga on well-being -- the per-protocol effect, requires
-special methods. These methods are not routinely used in the human
-sciences.
+special methods. Such methods are not yet routinely used in the human
+sciences (\citeproc{ref-bulbulia2024swigstime}{Bulbulia, 2024a}).
 
 \subsubsection{Example 8: Per Protocol Effect Lost in Sustained
 Treatments Because Both Measured and Unmeasured Confounders Affect
@@ -667,23 +673,23 @@ independent of all future counterfactual data, both for the treatments
 and the outcomes, then it might be possible to construct special
 estimators that identify the per-protocol effect of yoga on well-being
 in the presence of unmeasured confounding that affects adherence (refer
-to Hernán \emph{et al.} (\citeproc{ref-hernan2017per}{2017})). These
-special estimators are quite different from the ANOVAs, regressions
-models, and multi-level regression models routinely deployed in
-experimental studies. However, if we seek to understand the effect of
-yoga on well-being and not the effect of random assignment to yoga on
-well-being the routine estimators will not work: we require special
-estimators (\citeproc{ref-diaz2023lmtp}{Díaz \emph{et al.} 2023};
-\citeproc{ref-hernan2024WHATIF}{Hernan and Robins 2024};
-\citeproc{ref-hoffman2023}{Hoffman \emph{et al.} 2023}).
+to Hernán et al. (\citeproc{ref-hernan2017per}{2017})). These special
+estimators are quite different from the ANOVAs, regressions models, and
+multi-level regression models routinely deployed in experimental
+studies. However, if we seek to understand the effect of yoga on
+well-being and not the effect of random assignment to yoga on well-being
+the routine estimators will not work: we require special estimators
+(\citeproc{ref-diaz2023lmtp}{Díaz et al., 2023};
+\citeproc{ref-hernan2024WHATIF}{Hernan \& Robins, 2024};
+\citeproc{ref-hoffman2023}{Hoffman et al., 2023}).
 
-\subsection{Conclusions}\label{conclusions}
+\subsection{Summary}\label{summary}
 
 The examples considered here do not exhaust all threats to causal
 inference in experiments. For example, I have not covered biases arising
-from sample attrition (refer to Bulbulia
-(\citeproc{ref-bulbulia2024wierd}{2024 (in press)b})). However, I hope
-the eight examples presented persuade experimental investigators of the
+from sample attrition also known as right censoring bias (refer to
+Bulbulia (\citeproc{ref-bulbulia2024wierd}{2024b})). However, I hope the
+eight examples presented persuade experimental investigators of the
 following:
 
 First, there is no need to adjust for baseline confounders in a
@@ -692,7 +698,7 @@ of means should be reported, Lin has shown that if a study is
 sufficiently powered, regression adjustment where the full set of
 treatments are interacted with baseline covariates may improve (and will
 not diminish) asymptotic precision
-(\citeproc{ref-lin2012regressexperiments}{Lin 2013}). In some settings,
+(\citeproc{ref-lin2012regressexperiments}{Lin, 2013}). In some settings,
 investigators will want to evaluate effect modification with strata of
 covariates at baseline. However, in sufficiently large samples,
 randomisation ensures balance.
@@ -723,17 +729,17 @@ required when estimating causal effects in observational studies.
 Fourth, in a sequential randomised experiment, standard methods such as
 regression adjustment, statistical structural equation models, and
 multi-level models will often fail to yield unbiased estimands
-(\citeproc{ref-bulbulia2024swigstime}{Bulbulia 2024 (in press)a};
-\citeproc{ref-richardson2013}{Richardson and Robins 2013};
-\citeproc{ref-young2014identification}{Young \emph{et al.} 2014}).
-Special estimators such as `g-methods'
-(\citeproc{ref-hernan2024WHATIF}{Hernan and Robins 2024}) or targeted
-learning (\citeproc{ref-vanderlaan2018}{Van Der Laan and Rose 2018}) may
-be necessary to recover per-protocol effects in sequential designs. The
+(\citeproc{ref-bulbulia2024swigstime}{Bulbulia, 2024a};
+\citeproc{ref-richardson2013}{Richardson \& Robins, 2013};
+\citeproc{ref-young2014identification}{Young et al., 2014}). Special
+estimators such as `g-methods' (\citeproc{ref-hernan2024WHATIF}{Hernan
+\& Robins, 2024}) or targeted learning
+(\citeproc{ref-vanderlaan2018}{Van Der Laan \& Rose, 2018}) may be
+necessary to recover per-protocol effects in sequential designs. The
 requirements for estimating per-protocol effects in experiments cannot
 be stated in isolation from the details of each study
-(\citeproc{ref-hernan2024WHATIF}{Hernan and Robins 2024};
-\citeproc{ref-robins1986}{Robins 1986}).
+(\citeproc{ref-hernan2024WHATIF}{Hernan \& Robins, 2024};
+\citeproc{ref-robins1986}{Robins, 1986}).
 
 From these observations, we offer the following practical advice:
 
@@ -771,35 +777,48 @@ From these observations, we offer the following practical advice:
   intention-to-treat effect.
 \end{enumerate}
 
-In a separate work, I considered bias arising from attrition in the
-absence of confounding when treatment assignment is randomised
-(\citeproc{ref-bulbulia2024wierd}{Bulbulia 2024 (in press)b}).
 Describing the special methods for estimating per-protocol effects with
 multiple sequential treatments is beyond the scope of this commentary
-(\citeproc{ref-hernan2024WHATIF}{Hernan and Robins 2024}). My aim has
+(\citeproc{ref-hernan2024WHATIF}{Hernan \& Robins, 2024}). My aim has
 been to demonstrate that satisfying the assumptions for valid causal
 inferences in experiments is often more challenging than many
-experimental human scientists currently realize (refer to
-\citeproc{ref-montgomery2018}{Montgomery \emph{et al.} 2018}).
+experimental human scientists currently realise (refer to
+\citeproc{ref-montgomery2018}{Montgomery et al., 2018}).
 
 For example, I was part of an international team that administered
 questionnaires about religious identification following randomisation in
 a cross-cultural study investigating the source-credibility of religious
 and scientific authority (\citeproc{ref-hoogeveen2022einstein}{Hoogeveen
-\emph{et al.} 2022}). This approach might have attenuated effect
-modification by religiosity. Causal inference methods have significant
-potential to enhance the design, analysis, and interpretation of
-experimental research, including my own work.
+et al., 2022}). This approach might have attenuated effect modification
+by religiosity. Causal inference methods have considerable potential to
+enhance the design, analysis, and interpretation of experimental
+research, including my own work.
 
 \newpage{}
 
-\subsection{Funding}\label{funding}
+\subsection{Acknowledgements}\label{acknowledgements}
+
+I am grateful to Charles Efferson and Ruth Mace for constructive
+feedback.
+
+Errors are my own.
+
+\subsection{Conflict of Interest}\label{conflict-of-interest}
+
+The author declares no conflicts of interest
+
+\subsection{Financial Support}\label{financial-support}
 
 This work is supported by a grant from the Templeton Religion Trust
 (TRT0418) and RSNZ Marsden 3721245, 20-UOA-123; RSNZ 19-UOO-090. I also
 received support from the Max Planck Institute for the Science of Human
-History. The Funders had no role in preparing the manuscript or the
-decision to publish it.
+History. The Funders had no role in preparing the manuscript or deciding
+to publish it.
+
+\subsection{Research Transparency and
+Reproducibility}\label{research-transparency-and-reproducibility}
+
+No data were used in this manuscript.
 
 \newpage{}
 
@@ -808,129 +827,128 @@ decision to publish it.
 \phantomsection\label{refs}
 \begin{CSLReferences}{1}{0}
 \bibitem[\citeproctext]{ref-bulbulia2024swigstime}
-Bulbulia, JosephA (2024 (in press)a) Methods in causal inference part 2:
+Bulbulia, J. A. (2024a). Methods in causal inference part 2:
 Interaction, mediation, and time-varying treatments. \emph{Evolutionary
-Human Sciences}, \textbf{6}.
+Human Sciences}, \emph{6}.
 
 \bibitem[\citeproctext]{ref-bulbulia2024wierd}
-Bulbulia, JosephA (2024 (in press)b) Methods in causal inference part 3:
-Measurement error and external validity threats. \emph{Evolutionary
-Human Sciences}, \textbf{6}.
+Bulbulia, J. A. (2024b). Methods in causal inference part 3: Measurement
+error and external validity threats. \emph{Evolutionary Human Sciences},
+\emph{6}.
 
 \bibitem[\citeproctext]{ref-cole2010}
-Cole, SR, Platt, RW, Schisterman, EF, \ldots{} Poole, C (2010)
-Illustrating bias due to conditioning on a collider. \emph{International
-Journal of Epidemiology}, \textbf{39}(2), 417--420.
-doi:\href{https://doi.org/10.1093/ije/dyp334}{10.1093/ije/dyp334}.
+Cole, S. R., Platt, R. W., Schisterman, E. F., Chu, H., Westreich, D.,
+Richardson, D., \& Poole, C. (2010). Illustrating bias due to
+conditioning on a collider. \emph{International Journal of
+Epidemiology}, \emph{39}(2), 417--420.
+\url{https://doi.org/10.1093/ije/dyp334}
 
 \bibitem[\citeproctext]{ref-diaz2023lmtp}
-Díaz, I, Williams, N, Hoffman, KL, and Schenck, EJ (2023) Nonparametric
-causal effects based on longitudinal modified treatment policies.
-\emph{Journal of the American Statistical Association},
-\textbf{118}(542), 846--857.
-doi:\href{https://doi.org/10.1080/01621459.2021.1955691}{10.1080/01621459.2021.1955691}.
+Díaz, I., Williams, N., Hoffman, K. L., \& Schenck, E. J. (2023).
+Nonparametric causal effects based on longitudinal modified treatment
+policies. \emph{Journal of the American Statistical Association},
+\emph{118}(542), 846--857.
+\url{https://doi.org/10.1080/01621459.2021.1955691}
 
 \bibitem[\citeproctext]{ref-diaz2021nonparametric}
-Dı́az, I, Hejazi, NS, Rudolph, KE, and Der Laan, MJ van (2021)
+Dı́az, I., Hejazi, N. S., Rudolph, K. E., \& Der Laan, M. J. van. (2021).
 Nonparametric efficient causal mediation with intermediate confounders.
-\emph{Biometrika}, \textbf{108}(3), 627--641.
+\emph{Biometrika}, \emph{108}(3), 627--641.
 
 \bibitem[\citeproctext]{ref-hernan2024WHATIF}
-Hernan, MA, and Robins, JM (2024) \emph{Causal inference: What if?},
-Taylor \& Francis. Retrieved from
+Hernan, M. A., \& Robins, J. M. (2024). \emph{Causal inference: What
+if?} Taylor \& Francis.
 \url{https://www.hsph.harvard.edu/miguel-hernan/causal-inference-book/}
 
 \bibitem[\citeproctext]{ref-hernuxe1n2004}
-Hernán, MA (2004) A definition of causal effect for epidemiological
+Hernán, M. A. (2004). A definition of causal effect for epidemiological
 research. \emph{Journal of Epidemiology \& Community Health},
-\textbf{58}(4), 265--271.
-doi:\href{https://doi.org/10.1136/jech.2002.006361}{10.1136/jech.2002.006361}.
+\emph{58}(4), 265--271. \url{https://doi.org/10.1136/jech.2002.006361}
 
 \bibitem[\citeproctext]{ref-hernan2017per}
-Hernán, MA, Robins, JM, et al. (2017) Per-protocol analyses of pragmatic
-trials. \emph{N Engl J Med}, \textbf{377}(14), 1391--1398.
+Hernán, M. A., Robins, J. M., et al. (2017). Per-protocol analyses of
+pragmatic trials. \emph{N Engl J Med}, \emph{377}(14), 1391--1398.
 
 \bibitem[\citeproctext]{ref-hoffman2023}
-Hoffman, KL, Salazar-Barreto, D, Rudolph, KE, and Díaz, I (2023)
-Introducing longitudinal modified treatment policies: A unified
-framework for studying complex exposures.
-doi:\href{https://doi.org/10.48550/arXiv.2304.09460}{10.48550/arXiv.2304.09460}.
+Hoffman, K. L., Salazar-Barreto, D., Rudolph, K. E., \& Díaz, I. (2023).
+\emph{Introducing longitudinal modified treatment policies: A unified
+framework for studying complex exposures}.
+\url{https://doi.org/10.48550/arXiv.2304.09460}
 
 \bibitem[\citeproctext]{ref-hoogeveen2022einstein}
-Hoogeveen, S, Haaf, JM, Bulbulia, JA, et al.others (2022) The einstein
-effect provides global evidence for scientific source credibility
-effects and the influence of religiosity. \emph{Nature Human Behaviour},
-\textbf{6}(4), 523--535.
+Hoogeveen, S., Haaf, J. M., Bulbulia, J. A., Ross, R. M., McKay, R.,
+Altay, S., Bendixen, T., Berniūnas, R., Cheshin, A., Gentili, C., et al.
+(2022). The einstein effect provides global evidence for scientific
+source credibility effects and the influence of religiosity.
+\emph{Nature Human Behaviour}, \emph{6}(4), 523--535.
 
 \bibitem[\citeproctext]{ref-lash2009applying}
-Lash, TL, Fox, MP, and Fink, AK (2009) \emph{Applying quantitative bias
-analysis to epidemiologic data}, Springer.
+Lash, T. L., Fox, M. P., \& Fink, A. K. (2009). \emph{Applying
+quantitative bias analysis to epidemiologic data}. Springer.
 
 \bibitem[\citeproctext]{ref-lin2012regressexperiments}
-Lin, W (2013) {Agnostic notes on regression adjustments to experimental
-data: Reexamining Freedman's critique}. \emph{The Annals of Applied
-Statistics}, \textbf{7}(1), 295--318.
-doi:\href{https://doi.org/10.1214/12-AOAS583}{10.1214/12-AOAS583}.
+Lin, W. (2013). {Agnostic notes on regression adjustments to
+experimental data: Reexamining Freedman's critique}. \emph{The Annals of
+Applied Statistics}, \emph{7}(1), 295--318.
+\url{https://doi.org/10.1214/12-AOAS583}
 
 \bibitem[\citeproctext]{ref-linden2020EVALUE}
-Linden, A, Mathur, MB, and VanderWeele, TJ (2020) Conducting sensitivity
-analysis for unmeasured confounding in observational studies using
-e-values: The evalue package. \emph{The Stata Journal}, \textbf{20}(1),
-162--175.
+Linden, A., Mathur, M. B., \& VanderWeele, T. J. (2020). Conducting
+sensitivity analysis for unmeasured confounding in observational studies
+using e-values: The evalue package. \emph{The Stata Journal},
+\emph{20}(1), 162--175.
 
 \bibitem[\citeproctext]{ref-mcelreath2020}
-McElreath, R (2020) \emph{Statistical rethinking: A {B}ayesian course
-with examples in {R} and {S}tan}, CRC press.
+McElreath, R. (2020). \emph{Statistical rethinking: A {B}ayesian course
+with examples in {R} and {S}tan}. CRC press.
 
 \bibitem[\citeproctext]{ref-montgomery2018}
-Montgomery, JM, Nyhan, B, and Torres, M (2018) How conditioning on
+Montgomery, J. M., Nyhan, B., \& Torres, M. (2018). How conditioning on
 posttreatment variables can ruin your experiment and what to do about
-It. \emph{American Journal of Political Science}, \textbf{62}(3),
-760--775.
-doi:\href{https://doi.org/10.1111/ajps.12357}{10.1111/ajps.12357}.
+It. \emph{American Journal of Political Science}, \emph{62}(3),
+760--775. \url{https://doi.org/10.1111/ajps.12357}
 
 \bibitem[\citeproctext]{ref-pearl1995}
-Pearl, J (1995) Causal diagrams for empirical research.
-\emph{Biometrika}, \textbf{82}(4), 669--688.
+Pearl, J. (1995). Causal diagrams for empirical research.
+\emph{Biometrika}, \emph{82}(4), 669--688.
 
 \bibitem[\citeproctext]{ref-pearl2009a}
-Pearl, J (2009) \emph{Causality}, Cambridge University Press.
+Pearl, J. (2009). \emph{Causality}. Cambridge University Press.
 
 \bibitem[\citeproctext]{ref-richardson2013}
-Richardson, TS, and Robins, JM (2013) Single world intervention graphs:
-A primer. In, Citeseer. Retrieved from
+Richardson, T. S., \& Robins, J. M. (2013). \emph{Single world
+intervention graphs: A primer}.
 \url{https://core.ac.uk/display/102673558}
 
 \bibitem[\citeproctext]{ref-robins1986}
-Robins, J (1986) A new approach to causal inference in mortality studies
-with a sustained exposure period---application to control of the healthy
-worker survivor effect. \emph{Mathematical Modelling}, \textbf{7}(9-12),
-1393--1512.
+Robins, J. (1986). A new approach to causal inference in mortality
+studies with a sustained exposure period---application to control of the
+healthy worker survivor effect. \emph{Mathematical Modelling},
+\emph{7}(9-12), 1393--1512.
 
 \bibitem[\citeproctext]{ref-suzuki2020}
-Suzuki, E, Shinozaki, T, and Yamamoto, E (2020) Causal Diagrams:
-Pitfalls and Tips. \emph{Journal of Epidemiology}, \textbf{30}(4),
-153--162.
-doi:\href{https://doi.org/10.2188/jea.JE20190192}{10.2188/jea.JE20190192}.
+Suzuki, E., Shinozaki, T., \& Yamamoto, E. (2020). Causal Diagrams:
+Pitfalls and Tips. \emph{Journal of Epidemiology}, \emph{30}(4),
+153--162. \url{https://doi.org/10.2188/jea.JE20190192}
 
 \bibitem[\citeproctext]{ref-tripepi2007}
-Tripepi, G, Jager, KJ, Dekker, FW, Wanner, C, and Zoccali, C (2007)
-Measures of effect: Relative risks, odds ratios, risk difference, and
-{`}number needed to treat{'}. \emph{Kidney International},
-\textbf{72}(7), 789--791.
-doi:\href{https://doi.org/10.1038/sj.ki.5002432}{10.1038/sj.ki.5002432}.
+Tripepi, G., Jager, K. J., Dekker, F. W., Wanner, C., \& Zoccali, C.
+(2007). Measures of effect: Relative risks, odds ratios, risk
+difference, and {`}number needed to treat{'}. \emph{Kidney
+International}, \emph{72}(7), 789--791.
+\url{https://doi.org/10.1038/sj.ki.5002432}
 
 \bibitem[\citeproctext]{ref-vanderlaan2018}
-Van Der Laan, MJ, and Rose, S (2018) \emph{Targeted Learning in Data
-Science: Causal Inference for Complex Longitudinal Studies}, Cham:
-Springer International Publishing. Retrieved from
+Van Der Laan, M. J., \& Rose, S. (2018). \emph{Targeted Learning in Data
+Science: Causal Inference for Complex Longitudinal Studies}. Springer
+International Publishing.
 \url{http://link.springer.com/10.1007/978-3-319-65304-4}
 
 \bibitem[\citeproctext]{ref-young2014identification}
-Young, JG, Hernán, MA, and Robins, JM (2014) Identification, estimation
-and approximation of risk under interventions that depend on the natural
-value of treatment using observational data. \emph{Epidemiologic
-Methods}, \textbf{3}(1), 1--19.
+Young, J. G., Hernán, M. A., \& Robins, J. M. (2014). Identification,
+estimation and approximation of risk under interventions that depend on
+the natural value of treatment using observational data.
+\emph{Epidemiologic Methods}, \emph{3}(1), 1--19.
 
 \end{CSLReferences}
 
